Save/Update files [ci skip]

--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -393,7 +393,7 @@
  ideagroups.1208.a:0 "良い知らせを広めよう"
  evangelical_system:0 "福音の使命"
  desc_evangelical_system:0 "真の信仰は我々の植民地の人々に広がっている。それはより公式な宣教活動のための良い足がかりを与えてくれる。"
- ideagroups.1209.t:0 "植民地の困難!"
+ ideagroups.1209.t:0 "苦難に陥っている植民地！"
  ideagroups.1209.d:0 "我々の入植者の努力は広範囲に広がっているが、植民地の一つが、困難に見舞われている。食物が見つからず、多くの死者を出し、植民地から去って帰国するものが続出している。"
  ideagroups.1209.a:0 "くそ！"
  ideagroups.1209.b:0 "助けなければならない！"
@@ -449,7 +449,7 @@
  ideagroups.1504.a:0 "活用させてもらおう"
  ideagroups.1505.t:0 "高まる評判"
  ideagroups.1505.d:0 "長い間、外交官たちは我々の評判のために最善を尽くしてきた。そうそうあることではないし、ともかく高まった外交評判を満喫するとしよう。"
- ideagroups.1505.a:0 "利用しましょう!"
+ ideagroups.1505.a:0 "利用しましょう！"
  ideagroups.1506.t:0 "交易の成功"
  ideagroups.1506.d:0 "我々の商人階級は、世界中で驚異的な成功を収めている。ただの幸運だと言う者もいるが、どのようにやって来るかにかかわらず、富は富だ。"
  ideagroups.1506.a:0 "富を…共に分かち合おう"
@@ -459,14 +459,14 @@
  ideagroups.1507.b:0 "努力を惜しまない。"
  ideagroups.1508.t:0 "交易の失敗"
  ideagroups.1508.d:0 "我々の主要な商業の中心地から世界の製品が消えていったことで、商人たちは最近貧しくなってきている。そしてもっと重要なものである、歳入も減少している。"
- ideagroups.1508.a:0 "これは良くない!"
+ ideagroups.1508.a:0 "これは良くない！"
  ideagroups.1508.b:0 "なんとしても回避せよ"
  ideagroups.1509.t:0 "造船問題"
  ideagroups.1509.d:0 "船舶需要の増加により、造船のための原材料が高騰し、建造にかかる時間も増えてしまった。時間がかかるので、船の増産を求める人はもういない。"
  ideagroups.1509.a:0 "どれだけかかるんだ？"
  ideagroups.1510.t:0 "外交的な失言"
  ideagroups.1510.d:0 "隣国の非常に重要な国家行事の最中に、我が国の大使が非常に無礼な発言をしてしまった。この失言はすでに広まっており、長い時間をかけて笑い話になるまで、我が国の外交官たちは肩身の狭い思いをすることになるだろう。"
- ideagroups.1510.a:0 "これはひどい!"
+ ideagroups.1510.a:0 "これはひどい！"
  diplo_fuax_pas:0 "外交的な失言"
  desc_diplo_fuax_pas:0 "我々の大使の一人が犯した外交的な失言により、我々の外交官たちの生活がより困難になっている。"
  trade_failure:0 "交易の失敗"
@@ -593,11 +593,11 @@
  trade.4.d:0 "我々の商人たちは、彼らの商品を行商することに対する抵抗にあっていると伝えてきている。彼らはそれがまるで世界の終わりであるかの様に話し、生きている間に再び銅貨を稼ぐことはないだろうと恐れている。"
  trade.4.a:0 "それはただの商人にすぎない。"
  trade.4.b:0 "彼らの苦しみの緩和を試みる。"
- trade.5.t:0 "商人が破産!"
+ trade.5.t:0 "商人の破産！"
  trade.5.d:0 "我々の海外商人の一人がすべての財産を失い、乞食のようになって国へ帰ってきた。彼は破産してしまったので、我々はもはや彼の交易の恩恵を受けられない。"
  trade.5.a:0 "彼はたぶん成功し得なかっただろう…"
  trade.5.b:0 "彼を助けよう"
- trade.6.t:0 "商人が難破!"
+ trade.6.t:0 "商人の難破！"
  trade.6.d:0 "ある商人が沿岸の交易ノードで活動中に失踪、彼の物資は彼と共に全て海の底へ沈んでしまった。"
  trade.6.a:0 "それは残念だ"
  trade.7.t:0 "商人の苦痛"
