--- a/source/localisation/manchu_l_english.yml
+++ b/source/localisation/manchu_l_english.yml
@@ -12,7 +12,7 @@
  mch_khan_of_the_mongols_title:0 "モンゴルの平定"
  mch_khan_of_the_mongols_desc:0 "帝国目標の達成には、軍の創設が必要だろう。東部のモンゴル人は腕の立つ戦士であり、八旗軍を補完するのに何ら問題はないだろう。しかし、力を見せつけなければ、彼らは我々の命令に従いそうにない。"
  mch_mandate_of_heaven_title:0 "天命"
- mch_mandate_of_heaven_desc:0 "北京は我が支配下にあり、天命を要求する時だ。千年続く中国の新王朝を宣言する!"
+ mch_mandate_of_heaven_desc:0 "北京は我が支配下にあり、天命を要求する時だ。千年続く中国の新王朝を宣言する！"
  mch_green_standard_army_title:0 "緑営軍"
  mch_green_standard_army_desc:0 "中国軍は混乱しており、将軍たちの主への信頼は急速に失われている。もし中国北部を十分に支配できれば、これらの将軍たちは、命運尽きた皇帝に仕えるのではなく、こちらへの亡命を決断するかもしれない。"
  mch_devastate_china_title:0 "大都市の破壊"
@@ -105,11 +105,11 @@
  ming_crisis.4.t:0 "雲南保護領"
  ming_crisis.4.d:1 "南西諸州の異民族統治はいつの時代も難しいものでしたが、この危機以上の困難はありませんでした。反逆者どもは、将軍[CDL.Monarch.GetName]の下にまとまり始めました。そして、将軍は[Root.GetAdjective]国に自身を雲南の保護者として認めるよう要求しています。思い切った対応を取らなければ、この地域の支配権を完全に失う危険があります。"
  ming_crisis.4.a:0 "保護国を設立せよ"
- ming_crisis.4.b:1 "大[Root.GetName]は砕けない!"
+ ming_crisis.4.b:1 "大[Root.GetName]は砕けない！"
  ming_crisis.5.t:0 "南部支配権の喪失"
  ming_crisis.5.d:1 "中国南部は混沌としています。反乱軍の一団や盗賊が地方を略奪しており、国にとって極めて重要な都市のいくつかを支配さえしています。[Root.GetAdjective]国がこの危機に対処できなかったので、地方総督は自分の手で問題に対処しています。彼らは反乱軍と戦うために軍を召集しましたが、将軍たちはその命令に従うことを拒否しています。使者は、この危機を乗り切った後も、引き続き彼らの封建制で運営しようとしていると報告しています。彼らに自律的な支配を許すことは危険な前例を作ることになるでしょうが、これら領主に異議を唱えるには困難な状況下にいます。"
  ming_crisis.5.a:0 "自治権を持った総督を任命せよ。"
- ming_crisis.5.b:1 "大[Root.GetName]は砕けない!"
+ ming_crisis.5.b:1 "大[Root.GetName]は砕けない！"
  ming_crisis.6.t:0 "[ming_disaster_rebel_province.GetAreaName]における中国農民反乱"
  ming_crisis.6.d:1 "数十年にも及ぶ[Root.GetAdjective]政府の失政と怠慢の結果、[ming_disaster_rebel_province.GetAreaName]の農民たちが反乱に立ち上がりました。反乱がさらに広範囲に広がったならば、これまで以上に大きな危機を引き起こす恐れがあるので、すぐにでも彼らの問題に対処するか、早急に戦場で彼らと対峙せねばなりません。"
  ming_crisis.6.a:0 "この反乱は粉砕されるだろう。"
@@ -119,13 +119,13 @@
  mongols_unite_the_mongols_title:0 "モンゴル族の統一"
  mongols_unite_the_mongols_desc:0 "チンギス・ハンの下で、モンゴル人は一つのオルドと一人の支配者の下に統合された。全部族から支持者を集め、モンゴル族共通のアイデンティティを取り戻さねばならない。"
  mongols_restore_yuan_title:0 "大元の再建"
- mongols_restore_yuan_desc:0 "明の反乱により中国から追われ、天命を失った。フビライ・ハンの帝国を再建し、天命を取り戻さねばならない!"
+ mongols_restore_yuan_desc:0 "明の反乱により中国から追われ、天命を失った。フビライ・ハンの帝国を再建し、天命を取り戻さねばならない！"
  mongols_reconquer_china_title:0 "中国支配の復活"
  mongols_reconquer_china_desc:0 "元朝時代、中国全土はモンゴル族によって支配されていた。同じ目標のため努力せねばならない。"
  mongols_subjugate_korea_title:0 "朝鮮の平定"
  mongols_subjugate_korea_desc:0 "モンケ・ハンは、朝鮮族にモンゴル支配に服従することを強要した。以来、彼らは我々に膝を屈するのをやめており、彼らに真の主人が誰なのか思い出させねばならない。"
  mongols_invade_japan_title:0 "幕府の討伐"
- mongols_invade_japan_desc:0 "過去のハン国の大将軍たちでさえ日本征服に失敗した。我が艦隊が西から出航すれば、神風が我が運命を妨げることはないだろう!"
+ mongols_invade_japan_desc:0 "過去のハン国の大将軍たちでさえ日本征服に失敗した。我が艦隊が西から出航すれば、神風が我が運命を妨げることはないだろう！"
  mongols_annex_tibet_title:0 "チベットの併合"
  mongols_annex_tibet_desc:0 "多くのモンゴル人がチベット仏教を信仰し始めた。チベットを征服して、この信仰がハン国の支配下に絶対にあるようにせねばならない。"
  oir_tumu_crisis_title:0 "土木の変"
@@ -154,13 +154,13 @@
  mongol_religion_unity:0 "信仰の統一"
  desc_mongol_religion_unity:0 "モンゴルの人々は宗教の違いを克服した。"
  mongol_fleet_modifier:0 "モンゴル艦船の建造"
- desc_mongol_fleet_modifier:0 "今回は神風が吹いたとしても計画は狂わないだろう。幕府は必ず倒れる!"
+ desc_mongol_fleet_modifier:0 "今回は神風が吹いたとしても計画は狂わないだろう。幕府は必ず倒れる！"
  mongol_defeated_japan:0 "幕府の崩壊"
  desc_mongol_defeated_japan:0 "幕府の所在地である京都を破壊し、それによって、我が祖先が成し得なかったことを成し遂げた。"
  pax_mongolica:0 "パクス・モンゴリカ"
  desc_pax_mongolica:0 "女性が頭に金塊を乗せて帝国の端から端まで歩くことができ、安全に旅行できることが保証できた。"
  mongol_european_conquest:0 "ヨーロッパへの侵攻"
- desc_mongol_european_conquest:0 "ルーシを打ち破ったことで、ヨーロッパへの門戸が開かれた。彼らは再びモンゴルの遊牧民族の恐怖を知るだろう!"
+ desc_mongol_european_conquest:0 "ルーシを打ち破ったことで、ヨーロッパへの門戸が開かれた。彼らは再びモンゴルの遊牧民族の恐怖を知るだろう！"
  mongol_kurultai:0 "年次クリルタイ"
  desc_mongol_kurultai:0 "大クリルタイが毎年ここで開催され、この場で、全ての部族はハンへ忠誠を誓わなければならない。"
  mongol_kurultai_tooltip:0 "§Yカラコルム§!で§Y年次クリルタイ§!補正が有効となる"
@@ -192,9 +192,9 @@
  soo_tradition_of_wakou:0 "倭寇の伝統"
  soo_tradition_of_wakou_desc:0 "公的な証明の下での合法的で平和的な交易に理解を示す一方で、軍事緊張を伴うより悪い状況を準備する必要がある。幸いにも、我々の海賊行為の伝統は、力に関わる問題の解決に役立つかもしれない。"
  soo_fight_for_tsushima:0 "対馬を巡る争い"
- soo_fight_for_tsushima_desc:0 "アジア大陸と日本列島の間に位置する我が国土の対馬とその海上地帯は、各国が激しく衝突し、戦う場所だ。我が艦隊が強くなれば、自国を守るだけでなく、拡大できるだろう!"
+ soo_fight_for_tsushima_desc:0 "アジア大陸と日本列島の間に位置する我が国土の対馬とその海上地帯は、各国が激しく衝突し、戦う場所だ。我が艦隊が強くなれば、自国を守るだけでなく、拡大できるだろう！"
  soo_bahan_ship:0 "八幡船"
- soo_bahan_ship_desc:0 "我々の私掠船、八幡船は、八幡の旗を掲げ恐れられている。この戦の神により守られた我が艦隊を妨害する者は誰もいないだろう!"
+ soo_bahan_ship_desc:0 "我々の私掠船、八幡船は、八幡の旗を掲げ恐れられている。この戦の神により守られた我が艦隊を妨害する者は誰もいないだろう！"
  soo_tough_negotiator:0 "不屈の交渉人"
  soo_tough_negotiator_desc:0 "我々は異文化のるつぼであり、異民族間の交渉の難しさを知っている。いつまでも続くように見える厳しい戦争でも、外交的解決策を模索せねばならない。"
  soo_port_improvement:0 "港湾整備"
@@ -242,7 +242,7 @@
  desc_repaired_great_wall:0 "北狄の侵入を防ぐため、万里の長城の修復に取り組んでいる。"
  flavor_oir.1.t:0 "土木の変"
  flavor_oir.1.d:0 "オイラトとの衝突が開戦へと発展し、皇帝は軽率にも明軍を自ら率いることを決断しました。軍事的才能に欠け、顧問たちが警告するにもかかわらず、皇帝は先頭に立つ決意を固めています。"
- flavor_oir.1.a:0 "陛下、これは浅はかでございますぞ!"
+ flavor_oir.1.a:0 "陛下、これは浅はかでございますぞ！"
  flavor_oir.2.t:0 "明皇帝の捕縛"
  flavor_oir.2.d:0 "驚くべきことに、明の皇帝が自ら軍を率いて戦っているのを発見しました。愚かにも皇帝は戦場で我々に立ち向かいました。我々は哀れで統率の取れていない兵士をさっさと片付け、皇帝を捕らえることすらできてしまいました。\n\nこれは、明政府に対して大きな影響力を与えてくれるでしょうが、この状況をうまく利用するためには迅速に行動せねばなりません。条件を飲ませるには、北京占領を急がねばなりません。"
  flavor_oir.2.a:0 "北京へ進軍せよ！"
@@ -262,7 +262,7 @@
  flavor_oir.6.a:0 "受け入れざるを得ない。"
  flavor_oir.7.t:0 "捕虜となった皇帝の死"
  flavor_oir.7.d:0 "我々の最善の努力もむなしく、明の皇帝は我々の拘留下で亡くなりました。我々の要求を飲ませるための道具として彼を利用できると期待していましたが、もはやその望みはありません。"
- flavor_oir.7.a:0 "道具を失ってしまった!"
+ flavor_oir.7.a:0 "道具を失ってしまった！"
  mng_militry_incompetence:0 "無能な軍事能力"
  desc_mng_militry_incompetence:0 "軍事的才能に欠けていたにもかかわらず、皇帝は愚かにも自ら軍を率いることを決めた。"
  oir_captured_mng_emperor:0 "皇帝の捕縛"
@@ -373,7 +373,7 @@
  kor_build_army_mission_desc:0 "成長している国家は、適切な規模の軍隊を維持する必要がある。我々の軍隊を拡大することで、我々は海外の政治的利益をさらに高め、国内経済を刺激することができる。"
  kor_harness_seokleon_title:0 "石合戦の利用"
  kor_harness_seokleon_desc:2 "ソクチョン(「石戦」)は、朝鮮独自の集団で互いに石を投げ合って戦う試合のことだ。参加者や見物人の負傷率は避けられないほど高く、大きな石で武装して道をうろついている手に負えない若者たちの脅威もあって、この慣習を違法としたくなる。しかし、先見の明ある[Root.Monarch.GetTitle]なら、それを我が軍を強化する一種の軍事訓練として扱い、敵がどんな物を投げようとも絶対にそれに耐えうるようにできるだろう！"
- kor_expand_hwacha_title:0 "火車発射!"
+ kor_expand_hwacha_title:0 "火車発射！"
  kor_expand_hwacha_desc:2 "火車は、我々の技術者により開発された、一度に100発の弾を発射できる多連装噴進弾発射装置であり、密集した歩兵の陣形に対して壊滅的な打撃を与える。火車の兵器を拡大し、それらを軍隊に配備することにより、我々の強大な火力が放つ恐るべき砲撃は極東全体で有名になり、恐れられるようになる。"
  hwacha_firepower_bonus:0 "火車の火力"
  desc_hwacha_firepower_bonus:2 "火車は、我々の技術者により開発された、一度に100発の弾を発射できる多連装噴進弾発射装置であり、密集した歩兵の陣形に対して壊滅的な打撃を与える。それを我々の軍隊全体へ配備することで、敵の心に恐怖を植え付けるだろう！"
@@ -406,7 +406,7 @@
  kor_defeat_shogun_title:0 "将軍の打倒"
  kor_defeat_shogun_desc:0 "日本の豊かな土地は、収奪の頃合いを迎えている。日本の帝都である京都を占領できれば、我が征服へのさらなる抵抗はすぐに消え去る。"
  kor_turtle_ships_title:0 "亀甲船の出帆"
- kor_turtle_ships_desc:1 "我々の造船技師は新型の重装船に関する計画を立てた。発射された弾から乗組員を守るための側面部や屋根を覆う固い外板から着想を得て、彼らはそれを亀船または 「亀甲船」 と呼んでいる。この新しい艦船の恐るべき外観とその防御力は、朝鮮が守り切るために必要となる制海権を決して失わないことを保証するだろう!"
+ kor_turtle_ships_desc:1 "我々の造船技師は新型の重装船に関する計画を立てた。発射された弾から乗組員を守るための側面部や屋根を覆う固い外板から着想を得て、彼らはそれを亀船または 「亀甲船」 と呼んでいる。この新しい艦船の恐るべき外観とその防御力は、朝鮮が守り切るために必要となる制海権を決して失わないことを保証するだろう！"
  kor_turtle_fleets:0 "亀甲船"
  desc_kor_turtle_fleets:0 "亀船、もしくは「亀甲船」は、日本の朝鮮出兵(1592年ー1598年)の際、朝鮮海軍が使用した大型艦船の一種で、日本の制海権確保を阻み、最終的には退却を余儀なくさせた。名前の由来は船の防護部分、亀の甲羅のような形をした屋根の覆いからである。\n\n時折、これが始めて鉄で被覆された艦船であると主張されることもあるが、実際に鉄板を用いて建造されたものがあったかどうかは不明である。"
  kor_settle_north_title:0 "北部への移住"
@@ -432,7 +432,7 @@
  korea_in_balance:0 "安定した朝鮮"
  desc_korea_in_balance:0 "政治的、経済的、軍事的な自立が保障されたことで、国家は調和と均衡の新時代を迎えた。"
  kor_end_factional_strife_title:0 "派閥抗争からの解放"
- kor_end_factional_strife_desc:1 "李氏王朝の栄光ある始めの1世紀以後、派閥間の争いが蔓延し、国は弱体化し、分裂した。[Root.Monarch.GetTitle]らは、派閥間の対立を解消できず、生きるか死ぬかの争いが定期的に発生している。残念なことに、一方の派閥が優勢になりそうになるたびに、その派閥は分裂して、下位の派閥が再度入れ替わる。このような派閥争いを抑制し、朝鮮国の統一を復元せねばならない!"
+ kor_end_factional_strife_desc:1 "李氏王朝の栄光ある始めの1世紀以後、派閥間の争いが蔓延し、国は弱体化し、分裂した。[Root.Monarch.GetTitle]らは、派閥間の対立を解消できず、生きるか死ぬかの争いが定期的に発生している。残念なことに、一方の派閥が優勢になりそうになるたびに、その派閥は分裂して、下位の派閥が再度入れ替わる。このような派閥争いを抑制し、朝鮮国の統一を復元せねばならない！"
  KOR_has_factional_upheaval_tooltip:1 "イベント§Y宋明理学の台頭§!が発生済みである。"
  kor_end_factional_strife_tt:2 "§Y[Root.GetName]§!を悩ませてきた派閥の争いは終了します。"
  kor_develop_capital_title:0 "[Root.Capital.GetCapitalName]の拡大"
@@ -468,14 +468,14 @@
  desc_kor_japanese_loot:0 "高御座は、他の多くの日本の調度品とともに奪われ、朝鮮の首都に移送された。"
  flavor_kor.2.desc_new:0 "元国家の史官であり、宋明理学者の金馹孫は、[GetYear]年、三代目監察官を務めていましたが、官吏や両班の上層階級を批判することにどんな苦労も惜しまない人物であったことを証明してみせました。多くの反対派は、金馹孫の成宗実録の草稿の中で、いくつか反逆をほのめかしている箇所があると暴露しました。彼らは金馹孫の即時処刑と、宋明理学者の中で彼を支持していた人たちの流配や処刑を要求しました。"
  flavor_kor.2.A:0 "金馹孫を処刑しろ！"
- flavor_kor.2.B:0 "代わりに両班を追放せよ!"
+ flavor_kor.2.B:0 "代わりに両班を追放せよ！"
  flavor_kor.2.C:0 "政治的均衡を維持せねば。"
  flavor_kor.3.desc_new:2 "[GetDateText]年の宮廷での宴会の中で、儀礼大臣の李世佐は[Root.Monarch.GetTitle]の礼服に酒をこぼしてしまいました。激しい派閥争いや王権批判の後に起こった出来事でしたので、李世佐の反対派はそれを主権者に対する犯罪、すなわち反逆を示す出来事だと即座に解釈しました。彼らは、派閥を超えて李世佐とその多くの同胞たちの配流を要求しています。これは本当に王権を疑問視する勢力を排除するまたとない機会です。"
  flavor_kor.3.A:0 "我に反対する者は全員追放せよ。"
  flavor_kor.3.B:0 "政治的均衡を維持せねば。"
  flavor_kor.4.desc_new:0 "宋明理学の改革者である趙光祖は、儒教の理念に従って政府を形作ろうとしました。しかし、改革の初期の成功は、両班の旧体制を攻撃し、宋明理学の優位を確保することで彼らの持つ権力を弱体化させ、土地の没収を提案して彼らを怒らせたことで裏目に出たようです。\n\n両班は今、趙光祖は自身が王となろうとしている反逆者であり、彼の改革は間違っていて、社会と国家の根幹に害をなすと主張しています。趙光祖は反対があってでも、急いで改革を継続することが唯一の正しい行動方針であると主張しています。誰の味方をすべきでしょうか？"
- flavor_kor.4.A:0 "宋明理学者を追放せよ!"
- flavor_kor.4.B:0 "改革は継続せねば－どんなことがあろうとも!"
+ flavor_kor.4.A:0 "宋明理学者を追放せよ！"
+ flavor_kor.4.B:0 "改革は継続せねば－どんなことがあろうとも！"
  flavor_kor.8.t:0 "朝鮮での農民蜂起"
  flavor_kor.8.d:0 "近年、農村部の貧困層は苦しんでいます。彼らは、支払能力をはるかに超えた課税を受けて今も自活しているだけでなく、納税義務を逃れるために土地から逃げ出した際、その税は残った一族に転嫁され、さらに大きな税負担となっています。さらに、両班の上層階級たちは、次第に自分たちのために土地を得ていて、農村の貧困層を追い出しています。これは、農民の間でいわゆる無法的な雰囲気や混乱といったものをもたらしており、万が一放置されたならば、国家の重大な脅威となるでしょう。"
  flavor_kor.8.A:0 "身の程をわきまえさせねばならない。"
@@ -489,7 +489,7 @@
  flavor_kor.10.opt:0 "それならそれでよい。"
  flavor_kor.10.tt:2 "全階級で忠誠を§R10%§!喪失します。\n"
  flavor_kor.11.t:0 "激高した派閥"
- flavor_kor.11.d:0 "[Root.GetKorDHEEstate1]と[Root.GetKorDHEEstate2]の派閥間で、生きるか死ぬかの戦いにまで発展、突入しています。両派閥の指導者たちは、どうも両派の間で裁定を下すために[Root.GetKorFactionReason]が王権を行使しなければならないところまで発展した後、互いに大逆人だと非難しあっています。敵は我々がこうして分裂しているのを見て喜ばなければなりません!"
+ flavor_kor.11.d:0 "[Root.GetKorDHEEstate1]と[Root.GetKorDHEEstate2]の派閥間で、生きるか死ぬかの戦いにまで発展、突入しています。両派閥の指導者たちは、どうも両派の間で裁定を下すために[Root.GetKorFactionReason]が王権を行使しなければならないところまで発展した後、互いに大逆人だと非難しあっています。敵は我々がこうして分裂しているのを見て喜ばなければなりません！"
  flavor_kor.11.A:0 "[Root.GetKorDHEEstate1]を支援せよ！"
  flavor_kor.11.B:0 "[Root.GetKorDHEEstate2]を支援せよ！"
  flavor_kor.11.tt:0 "\nこのイベントの再発を防ぐには、ミッション§Y派閥抗争からの解放§!を達成してください。"
@@ -510,7 +510,7 @@
  leadered_peasant_rebels_desc:0 "恐ろしい盗賊の指導者に率いられた農民の反乱軍は、圧政と厳しい課税を十分に受けていた。彼らは装備も訓練も不十分で、主に歩兵構成である。"
  leadered_peasant_rebels_army:0 "農民軍"
  DEVELOPMENT_IN_PROVINCES:0 "領有する州の開発度$DEVELOPMENT$（現在値: $CURRENT|Y$）"
- string_start_korea:1 "§Y李氏朝鮮§!、正式には§Y大朝鮮国§!は、1392年に将軍§Y李成桂§!（後の§Y太祖王§!）のクーデターによって、§Yモンゴル§!や§Y明§!の侵攻による焼け跡の中から生まれました。当初から、太祖は§Y中国の明§!と強い結びつきを持っていました。新国号決定の際、「和寧」と「朝鮮」の選択肢を明に提示し、皇帝の承認を得て決定しました。\n\nこの§Y中国の明§!との密接な関係は、17世紀半ばに明が滅亡するまで続きましたー朝鮮側が従属する形としてですが。§Y儒教§!の信奉者として、朝鮮は中国を朝鮮世界の中心と見ており、李氏朝鮮はある意味で中国以上に中華風であるー「小中国」  となりました。一方で中国側は李氏朝鮮を 「東方の礼儀正しい民の国」 と見ていました。明が§Y天命§!の要求するのに誰もが認める存在であり続ける限り、この強い絆を維持することは発足したばかりの朝鮮王国が生き残っていくのに不可欠です。\n\n§Y李氏朝鮮§!統治の最初の1世紀の成果は非常に大きいものでした。15世紀初頭には、§Y京城§!と§Y六鎮§!の国境地域を§Y女真族§!から奪い、現在の朝鮮が形成している領域に統一できました。学術や学問も盛んでした。特にハングル文字は、1446年に導入されました。ハングル文字は漢字と異なり、簡単に学ぶことができ、朝鮮語に適応しやすいように設計されています。ハングル文字は、はるかに便利に使用できるようになり、社会の幅広い層で学術的文書を読むことができるようになりました。さらに、農学や火薬、法の成文化などの分野で目覚ましい進歩が見られ、領地の地形の調査や記録に大きく力を入れました。\n\nしかし、朝鮮王国にとっての脅威は、国境の内外を問わず存在しています。国内では、朝鮮の農民は貧しいままであり、このまま何もしなければ、§Y農民一揆§!や税収不足が問題となりそうです。さらに、§Y両班§!の上流階級は大部分が団結していますが、この見せ掛けに亀裂はすでに浮かび始めており、いつでも§Y派閥抗争§!が勃発する可能性があります。\n\n対外的な脅威が多く存在しています。北部では、好戦的な§Y女真族§!が待ち構えていますー目下、分裂していますが、万が一強力な指導者の下で統一されたなら、朝鮮侵略が急速に進むかもしれません。同じく、海を越えた東には、戦いに明け暮れる§Y大名§!と自称§Y将軍§!の国家、§Y日本§!がいます。統一された日本が朝鮮海の狭い海峡を越えて勢力を拡大しないよう、用心せねばなりません。最後に、朝鮮は§Y明帝国§!の影に隠れていますが、龍を起こす李氏朝鮮の世子に災いあれ!"
+ string_start_korea:1 "§Y李氏朝鮮§!、正式には§Y大朝鮮国§!は、1392年に将軍§Y李成桂§!（後の§Y太祖王§!）のクーデターによって、§Yモンゴル§!や§Y明§!の侵攻による焼け跡の中から生まれました。当初から、太祖は§Y中国の明§!と強い結びつきを持っていました。新国号決定の際、「和寧」と「朝鮮」の選択肢を明に提示し、皇帝の承認を得て決定しました。\n\nこの§Y中国の明§!との密接な関係は、17世紀半ばに明が滅亡するまで続きましたー朝鮮側が従属する形としてですが。§Y儒教§!の信奉者として、朝鮮は中国を朝鮮世界の中心と見ており、李氏朝鮮はある意味で中国以上に中華風であるー「小中国」  となりました。一方で中国側は李氏朝鮮を 「東方の礼儀正しい民の国」 と見ていました。明が§Y天命§!の要求するのに誰もが認める存在であり続ける限り、この強い絆を維持することは発足したばかりの朝鮮王国が生き残っていくのに不可欠です。\n\n§Y李氏朝鮮§!統治の最初の1世紀の成果は非常に大きいものでした。15世紀初頭には、§Y京城§!と§Y六鎮§!の国境地域を§Y女真族§!から奪い、現在の朝鮮が形成している領域に統一できました。学術や学問も盛んでした。特にハングル文字は、1446年に導入されました。ハングル文字は漢字と異なり、簡単に学ぶことができ、朝鮮語に適応しやすいように設計されています。ハングル文字は、はるかに便利に使用できるようになり、社会の幅広い層で学術的文書を読むことができるようになりました。さらに、農学や火薬、法の成文化などの分野で目覚ましい進歩が見られ、領地の地形の調査や記録に大きく力を入れました。\n\nしかし、朝鮮王国にとっての脅威は、国境の内外を問わず存在しています。国内では、朝鮮の農民は貧しいままであり、このまま何もしなければ、§Y農民一揆§!や税収不足が問題となりそうです。さらに、§Y両班§!の上流階級は大部分が団結していますが、この見せ掛けに亀裂はすでに浮かび始めており、いつでも§Y派閥抗争§!が勃発する可能性があります。\n\n対外的な脅威が多く存在しています。北部では、好戦的な§Y女真族§!が待ち構えています－目下、分裂していますが、万が一強力な指導者の下で統一されたなら、朝鮮侵略が急速に進むかもしれません。同じく、海を越えた東には、戦いに明け暮れる§Y大名§!と自称§Y将軍§!の国家、§Y日本§!がいます。統一された日本が朝鮮海の狭い海峡を越えて勢力を拡大しないよう、用心せねばなりません。最後に、朝鮮は§Y明帝国§!の影に隠れていますが、龍を起こす李氏朝鮮の世子に災いあれ！"
  string_start_jurchens:1 "漢民族は、§Y女真族§!が団結した際の危険性をよく知っています。12世紀、女真族の将軍§Y阿骨打§!は、女真族を統一させ、§Y遼§!に蜂起し、§Y金§!国を設立し、自らを§Y太祖皇帝§!と名乗りました。§Y明§!王朝は再び女真族が蜂起しないよう願っており、どの一族も力を持ちすぎないよう彼らがその一族間で戦い続けるように措置を講じています。この目的のために、明は§Y建州§!と§Y海西§!の女真族に対して緩い宗主の立場を確立しました。\n\n女真族の中で、建州女真は群を抜いて強力です。海西と同様、彼らは定住民族です。中国支配の制度や思想が徐々にこの地方へ浸透し、現地の漢民族に受容されつつあります。\n\n中国の支配や慣習に侵食されているにもかかわらず、定住した女真族は、北方の 「野生の女真族」 の伝統と戦士文化のほぼ同じものを持ち続けています。§Y野人§!、§Y兀狄哈§!、§Y東海§!の遊牧民族は決して非力ではなく、互いに戦いあわねばならず、§Yソロン§!族と§Yニブフ§!族は相対的に孤立しています。\n\n§Y朝鮮§!は度々女真族と対立しており、最近になって、建州女真の氏族から東北地方の§Y六鎮§!と§Y京城§!を併合しました。女真族も朝鮮人も§Y白頭山§!を聖地と捉えており、互いに自分たちだけが神聖なる山頂を訪れることができると信じています。\n\n女真族と§Yモンゴル族§!の関係性は絶えず変化しています。時には盟友、時には恨み重なる相手であり、双方の民族の部族が政治的な関係確保のためにしばしば結婚し、王家同士の確執も見られます。§Yウネボラト・ハン§!配下の§Yホルチン§!のモンゴル族は東部で支配的な存在になり、もし封じ込めされなければ、女真族の領地への拡大に目を向けるかもしれません。\n\n女真族は金の時代を懐かしく思い出します。もし彼らが部族間の分裂を克服し、モンゴル族を寄せ付けないことができれば、彼らは新しい指導者の下で再び立ち上がり、明を打ち負かし、自ら新しい独自性を作り上げることができるでしょう。"
  chahar_area:0 "チャハル"
  cicigar_area:0 "チチガル"
@@ -630,7 +630,7 @@
  mongolian_mobility:0 "モンゴル族の機動力"
  mongolian_mobility_desc:2 "我が兵は通常3～4頭の馬を保有しており、馬が疲れたときにはいつでも馬を交代することができるので、何日も止まらずに高速移動できる。さらに、馬肉や馬乳で食料を確保できるので、我が軍は、いわゆる文明国の軍よりも飢餓に強い。こういったことで、敵が思うより短い期間で驚くほどの面積をカバーし、敵を容易に出し抜くことができる。"
  MNG_kheshig:0 "ケシク"
- MNG_kheshig_desc:0 "かつてケシクは、大モンゴルのハンの強い護衛兵であった。彼らの子孫もモンゴルのハン護衛を続けており、騎乗して国民の敵と戦っている!"
+ MNG_kheshig_desc:0 "かつてケシクは、大モンゴルのハンの強い護衛兵であった。彼らの子孫もモンゴルのハン護衛を続けており、騎乗して国民の敵と戦っている！"
  CHG_ideas:0 "チャガタイのアイデア"
  CHG_ideas_start:0 "チャガタイの伝統"
  CHG_ideas_bonus:0 "チャガタイの宿願"
@@ -719,8 +719,8 @@
  empire_of_china_nomadic_border_events.3.tooltip:0 "§Y[From.GetName]§!:\n国難§Y国境の遊牧民への無防備§!の侵攻度が§R10%§!以上である。"
  empire_of_china_nomadic_border_events.4.t:0 "[From.GetUsableName]での恐慌"
  empire_of_china_nomadic_border_events.4.d:0 "[From.GetUsableName]へ脅威を与える恐怖が拡散する中で、[From.GetAdjective][From.Monarch.GetTitle]は権威維持のための厳しい戦いに直面しています。彼らの中にいる我々の諜報員たちは、すぐにでも、不満によるあからさまな反逆や[From.Monarch.GetTitle]の権威の暴落が噴出すると予想しています…中国の豊かさを自らの手につかむ絶好の機会を提供しています。"
- empire_of_china_nomadic_border_events.4.opt.manchu:0 "八旗隊を招集せよ!"
- empire_of_china_nomadic_border_events.4.opt:0 "中国は我々のものだ!"
+ empire_of_china_nomadic_border_events.4.opt.manchu:0 "八旗隊を招集せよ！"
+ empire_of_china_nomadic_border_events.4.opt:0 "中国は我々のものだ！"
  empire_of_china_nomadic_border_events.4.tooltip:0 "§Y[From.GetName]§!:\n国難§Y国境の遊牧民への無防備§!の進行度が§R75%§!以上である。"
  empire_of_china_nomadic_border_events.5.t:0 "[emperor_of_china.GetAdjective]の懸念の払拭"
  empire_of_china_nomadic_border_events.5.d:0 "我々はもはや[emperor_of_china.GetUsableName]への脅威ではないと考えられているので、彼らの属国は再度彼らの支配されることを甘んじて受け入れています。"
