--- a/source/localisation/missions_l_english.yml
+++ b/source/localisation/missions_l_english.yml
@@ -20,7 +20,7 @@
  claim_on_rival_title:0 "我々のライバルが持つ$PROVINCENAME$州の請求権を主張せよ"
  claim_on_rival_desc:0 "我々のライバルである$COUNTRY$の州について、請求権を捏造せよ。そうすれば我々が奴らを攻撃する口実が得られる。"
  take_from_rival_title:0 "$PROVINCENAME$を奪取！"
- take_from_rival_desc:0 "我々のライバルである$OWNERNAME$から$PROVINCENAME$を奪い取る時が来た!"
+ take_from_rival_desc:0 "我々のライバルである$OWNERNAME$から$PROVINCENAME$を奪い取る時が来た！"
  insult_rival_title:0 "我々のライバル$COUNTRY$をコケにしろ"
  insult_rival_desc:0 "我々が奴らを嫌っていることを知らせてやりたい。"
  befriend_rival_rival_title:0 "ライバルのライバル"
@@ -28,7 +28,7 @@
  take_from_rival_culture_title:0 "$PROVINCECULTURE$ の人々を救え！"
  take_from_rival_culture_desc:0 "我々のライバルである$OWNERNAME$が、$PROVINCENAME$において我々の同胞を人質にとっている。彼らを救い出す時だ！"
  take_from_rival_religion_title:0 "$PROVINCENAME$の信徒を救出！"
- take_from_rival_religion_desc:0 "我々のライバルである$OWNERNAME$は、$PROVINCENAME$にいる我らの同胞に対してひどい迫害を行っている。我々は彼らの魂を救わねばならない!"
+ take_from_rival_religion_desc:0 "我々のライバルである$OWNERNAME$は、$PROVINCENAME$にいる我らの同胞に対してひどい迫害を行っている。我々は彼らの魂を救わねばならない！"
  befriend_threat_rival_title:0 "ライバルの脅威"
  befriend_threat_rival_desc:0 "$COUNTRY$は我々を脅かす国のライバルである以上、彼らは我々の友となるだろう。"
  improve_fort_threat_1_title:0 "国境紛争地帯の要塞化"
