--- a/source/localisation/rights_of_man_l_english.yml
+++ b/source/localisation/rights_of_man_l_english.yml
@@ -1209,7 +1209,7 @@
  consort_events.6.t:0 "相思相愛"
  consort_events.6.d:0 "王室間の婚姻はめったに愛が問題とはならない。むしろ、それは無駄にしてはならない外交的な機会である。将来の配偶者が適切な地位を得ていることは非常に重要であり、国内政治の均衡を邪魔しないため、彼女または彼が外国人であることは有利である。\n\nしかし、[Root.Monarch.GetTitle]でさえ、愛にのめり込むことができる。そしてそんなものは少なくとも[Root.Monarch.GetHerHis]の視点からは今や消えているようだ。[consort_home.GetName]州出身の一人の住民が[Root.Monarch.GetName]の目に止まった。[Root.Monarch.GetSheHeCap]はこれまで以上に幸せであり、ほとんど無限に魅了されているようだ。我々の貴族や顧問はあまり満足していないが、[Root.Monarch.GetName]と[Root.Monarch.GetHerHis]の愛する人との結婚は、領土の庶民たちの間で強い支持を得ている。"
  consort_events.6.a:0 "[Root.Monarch.GetTitle]が持つ[Root.Monarch.GetHerHis]の心の欲求に任せよう。"
- consort_events.6.b:0 "卑しい身分の者と結婚だと？問題外だ!"
+ consort_events.6.b:0 "卑しい身分の者と結婚だと？問題外だ！"
  consort_of_the_people:0 "人々の配偶者"
  desc_consort_of_the_people:0 "我々の支配者の配偶者は、選ばれた者と国民の間の激しい摩擦を和らげる存在として、庶民に愛されている。"
  home_of_consort:0 "配偶者の故郷"
