--- a/source/localisation/sikh_l_english.yml
+++ b/source/localisation/sikh_l_english.yml
@@ -29,7 +29,7 @@
  sikhism_flavor.2.a:0 "グルの威光が我々を照らします。"
  sikhism_flavor.3.t:0 "グル・アマール・ダス"
  sikhism_flavor.3.d:0 "グル・アンガットがこの世を去り、グルの地位を忠実な家臣アマール・ダスに残しました。男はとても謙虚ですが、グル・アマール・ダスはシーク教の教えのための野心を持ち、民衆の間で人気を博している平等の原則を強化し、マサンドと呼ばれる宗教の代表を確立し、グル1人より広く信仰の言葉を広げています。"
- sikhism_flavor.3.a:0 "我々のグルは弱者と奴隷解放の力だ!"
+ sikhism_flavor.3.a:0 "我々のグルは弱者と奴隷解放の力だ！"
  sikhism_flavor.4.t:0 "グル・ラム・ダス"
  sikhism_flavor.4.d:0 "グル・アマール・ダスはこの世を去り、今ラム・ダスとして知られている彼の弟子にして、婿養子のジィタにグルの地位が引き継がれました。彼は聖都の建設を監督し、孤独な瞑想だけでなくシーク教徒の仲間や共同体と積極的に関わることで悟りに達することを信者に奨励しています。"
  sikhism_flavor.4.a:0 "我々のグルは、神のしもべであり、我々はグルに仕えています。"
@@ -62,4 +62,4 @@
  sikhism_flavor.13.d:0 "グルと呼ばれる男が[Root.GetName]に到着しました。彼は、故郷から遠く離れた土地へ旅立ち、唯一神の言葉を広げるという天からの啓示を受けたのだと言っています。\n\n彼の信者たちは、この神こそが [Root.Owner.Religion.GetName]を含む全ての宗教の神であると言い張り、ナーナクこそが信仰の真理を明らかにすると主張しています。しかしながら、これらの教えが我々の儀式や伝統を拒絶し、人々を[Root.Owner.Religion.GetName]の正しい道から逸脱させることは疑いようがありません。"
  sikhism_flavor.13.dnanaknolonger:0 "グルと呼ばれる男が[Root.GetName]に到着しました。彼は、故郷から遠く離れた土地へ旅立ち、唯一神の言葉を広げるという天からの啓示を受けたのだと言っています。\n\n彼の信者たちは、この神こそが [Root.Owner.Religion.GetName]を含む全ての宗教の神であると言い張り、ナーナクこそが信仰の真理を明らかにすると主張しています。しかしながら、これらの教えが我々の儀式や伝統を拒絶し、人々を[Root.Owner.Religion.GetName]の正しい道から逸脱させることは疑いようがありません。"
  sikhism_flavor.13.a:0 "彼らが税を支払う限りは、彼らが信じたいものを信じることができる。"
- sikhism_flavor.13.b:1 "この男を[Root.GetName]から追い出せ!"
+ sikhism_flavor.13.b:1 "この男を[Root.GetName]から追い出せ！"
