Save/Update files [ci skip]

--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -3016,8 +3016,8 @@
  horde_legacy_desc:0 "ステップでの騎馬による戦闘に関して長い伝統がある。子供達は歩くより早く鞍に乗せられ、馬はほぼ彼らの一部となる。この古い伝統の維持することで、軍隊はトルコマン種馬の戦闘での使用方法を理解した兵に導かれるようになる。"
  deserts_of_khiva:0 "ヒヴァの砂漠"
  deserts_of_khiva_desc:0 "先祖以来の伝説では、ヒヴァは預言者ノアの息子セムが砂漠の真ん中で井戸を掘ったことにより誕生しました。この井戸の水を飲んだ人は、甘い水を意味する「ヒワック」と叫んだ。この水なしでは、ヒヴァの日中の極暑もしくは夜の極寒がこの地域の人々の命を奪うでしょう。"
- oasis_of_merv:0 "メルブのオアシス"
- oasis_of_merv_desc:0 "メルブのオアシスは、カラカム砂漠にあり、何百年もの間、シルクロード沿いに戦略的に不可欠な軍の本部と停留所が置かれた。先祖がしてきたように、オアシスを利用するため、適切に管理し、維持するよう努めなければならない。"
+ oasis_of_merv:0 "メルヴのオアシス"
+ oasis_of_merv_desc:0 "メルヴのオアシスは、カラカム砂漠にあり、何百年もの間、シルクロード沿いに戦略的に不可欠な軍の本部と停留所が置かれた。先祖がしてきたように、オアシスを利用するため、適切に管理し、維持するよう努めなければならない。"
  djuma_mosque:0 "ジュマ・モスク"
  djuma_mosque_desc:0 "ヒヴァの「金曜日のモスク」は中央アジアのそれと同じではなく、平らな天井と200以上の柱をもつ。アムダリヤ川の底にある古い王都から運ばれたホラズム彫刻の最高のものが飾られている。"
  amu_darya:0 "アムダリヤ川"
