Save/Update files [ci skip]

--- a/source/localisation/emperor_content_l_english.yml
+++ b/source/localisation/emperor_content_l_english.yml
@@ -1022,42 +1022,42 @@
  flavor_tus.20.a:0 "奴等を宮殿から吊るせ！"
  flavor_tus.20.b:0 "パッツィ家を支持しよう。"
  strengthened_signoria_tt:0 "§Y指導者を再選したり、前指導者の一族から指導者を選出したりする際に、共和国伝統を消費しなくなります。§!"
- strengthened_signoria_election_tt:0 "§Yこのオプションはシニョリーア制の強化により、共和的伝統を消費しません。§!"
- signoria_leader_dies_tt:0 "§Y[Root.Monarch.GetName]§!は殺されます！"
- pol_disaster_concede_tt:0 "§Yこれは君主制を廃止することで、我々をセイムによる完全な支配を認める道へと動かします。§!"
- flavor_pol.21.t:0 "セイムが支配を握る"
- flavor_pol.21.d:0 "セイムで数え切れないほどの妥協のように感じたものに同意した[Root.Monarch.GetName]は、これ以上は我慢できないとして、[Root.Monarch.GetHerHis]の退位を発表した。[Root.GetAdjective]の君主制の悲惨な国家を継承しようとする王位候補者がいないために、今や完全な権力がセイムに存在している。[Root.GetName]は選挙君主制により共和国と呼ばれることもあるが、今日からは真に[Root.GetName]の最も静穏なる共和国が存在することになるだろう。"
+ strengthened_signoria_election_tt:0 "§Yシニョリーア制が強化されたことにより、この選択には共和国伝統を消費しません。§!"
+ signoria_leader_dies_tt:0 "§Y[Root.Monarch.GetName]§!は殺害されるでしょう。"
+ pol_disaster_concede_tt:0 "§Yこの選択を行うと、最終的には君主制が廃止され、この国はセイムが支配する共和国になるでしょう。§!"
+ flavor_pol.21.t:0 "セイムが実権を掌握"
+ flavor_pol.21.d:0 "セイムによる数々の要求に屈した[Root.Monarch.GetName]は、もはや自らが国政を執り行うことは不可能であるとして、退位する意向を表明した。しかし、代わって[Root.GetAdjective]の王位に就き、厳しい状況にあるこの国を運営したいという者は現れなかった。このため、国の実権はセイムのもとに移った。これまでも[Root.GetName]の選挙王政はしばしば共和制の一種と見做されてきたが、この国はついに正真正銘の共和国となってしまった。"
  flavor_pol.21.a:0 "セイム万歳！共和国万歳！"
  flavor_pol.22.t:0 "王権のための闘争の終結"
  flavor_pol.22.d:0 "政治的、軍事的紛争の両方を伴う長い闘争を経て、[Root.GetName]の危機は終わりを告げた。[Root.GetName]において真の権力がどこにあるのか、疑う余地はもはやない。"
- flavor_pol.22.a:0 "[Root.Monarch.GetTitle]こそ至高だ！"
- flavor_pol.22.b:0 "セイムこそ至高だ！"
+ flavor_pol.22.a:0 "[Root.Monarch.GetTitle]万歳！"
+ flavor_pol.22.b:0 "セイム万歳！"
  MOST_SERENE_REPUBLIC:0 "高貴なる共和国"
  MARSHAL:0 "元帥"
  SERENE_MARSHAL:0 "高貴な元帥"
  MOST_SERNE_MARSHAL:0 "最も高貴な元帥"
  pol_struggle_for_royal_power_disaster:0 "王権のための闘争"
- desc_pol_struggle_for_royal_power_disaster:0 "君主の権威とセイムの権力を巡る紛争が激化している。"
+ desc_pol_struggle_for_royal_power_disaster:0 "君主とセイムの間の権力闘争が激化している。"
  patriotic_company_leader_deserts:0 "§Y[patriotic_mercs.Leader.GetName]が[patriotic_mercs.GetName]から去ります§!"
  mercs.1.t:0 "[patriotic_mercs.GetName]の不満"
  mercs.1.d:0 "[patriotic_mercs.GetName]の多くは、悲惨な彼らの故郷である[merc_home_country.GetName]に根拠のない感傷的な想いを抱いている。炎に包まれた[merc_home_province.GetCapitalName]を自身の目で見ることを想像して恐怖を感じ、兵士たちのかなりの部分が脱走している。"
  mercs.1.a:0 "彼らの心は弱い。"
  mercs.1.b:0 "スコットランド人が真に愛するのは金だ。"
- mercs.2.t:0 "彼らの敵の敵"
- mercs.2.d:0 "[bloodthirsty_mercs.GetName]の兵士たちは、彼らの憎むべき敵である[bloodthirsty_mercs_enemy.GetAdjective]と戦う機会を待ち望んでいる。[bloodthirsty_mercs_home.GetName]と[bloodthirsty_mercs_enemy.GetName]の間の激しい争いは、傭兵たちにも拡大しているようだ。"
- mercs.2.a:0 "幸せな偶然だな。"
+ mercs.2.t:0 "敵の敵は味方"
+ mercs.2.d:0 "[bloodthirsty_mercs.GetName]の兵士たちは、彼らの憎むべき敵である[bloodthirsty_mercs_enemy.GetAdjective]と戦う機会を待ち望んでいる。[bloodthirsty_mercs_home.GetName]と[bloodthirsty_mercs_enemy.GetName]の間の激しい対立は、傭兵たちにも影響を与えている。"
+ mercs.2.a:0 "嬉しい偶然だ。"
  mercs.2.b:0 "真の[Root.GetAdjective]の兵士たち全てが共有する感情だ。"
- bloodthirsty_mercs_modifier:0 "彼らの敵の敵"
- desc_bloodthirsty_mercs_modifier:0 "我々は我々の傭兵団の厳しいライバルと戦っている。"
- bloodthirsty_mercs_modifier_universal:0 "彼らの敵の敵"
- desc_bloodthirsty_mercs_modifier_universal:0 "我々は我々の傭兵団の厳しいライバルと戦っている。"
- mercs.3.t:0 "略奪品の支払い"
- mercs.3.d:1 "我々の雇用下にあるいくつかの傭兵団は、彼らの雇用条件に不満を抱き始めている。[rich_enemy_province.GetName]のような敵の都市の富は、彼らの貧弱な給料とほとんど比較できないため、あるいは彼らはそれを議論する。[loot_mercs.GetName]の隊長である[loot_mercs.Leader.GetName]は、彼と彼の兵士たちのために略奪品の多くの分け前をはっきりと要求している。"
- mercs.3.a:0 "彼らに略奪品の分け前を与えよう。"
- mercs.3.b:0 "略奪品は拒否するが、給与を増やす。"
- mercs.3.c:0 "我々によくもそんな要求ができたものだ！"
+ bloodthirsty_mercs_modifier:0 "敵の敵は味方"
+ desc_bloodthirsty_mercs_modifier:0 "現在、我が国は傭兵たちの故国の敵と戦っている。"
+ bloodthirsty_mercs_modifier_universal:0 "敵の敵は味方"
+ desc_bloodthirsty_mercs_modifier_universal:0 "現在、我が国は傭兵たちの故国の敵と戦っている。"
+ mercs.3.t:0 "略奪の許可"
+ mercs.3.d:1 "傭兵団の中で、待遇への不満が高まっている。[rich_enemy_province.GetName]などの敵国の都市の富は、彼らの給料とは比べものにならないほど豊かだ。少なくとも彼らはそう主張している。[loot_mercs.GetName]の隊長[loot_mercs.Leader.GetName]は、自分たちの給料の代わりとして、掠奪品の一部を自分たちに渡すよう公然と主張している。"
+ mercs.3.a:0 "分け前を与えてやろう。"
+ mercs.3.b:0 "略奪品は渡さないが、代わりに給料を増やしてやろう。"
+ mercs.3.c:0 "よくもそのような要求ができたものだ！"
  mercs_allowed_to_loot:1 "略奪の特権"
- desc_mercs_allowed_to_loot:0 "我々は雇われた傭兵のために戦争の略奪品の一部を確保している。"
+ desc_mercs_allowed_to_loot:0 "傭兵たちの給料の代わりとして、略奪品の一部を彼らに渡している。"
  mercs_not_allowed_to_loot_money:0 "特別手当の支払い"
  desc_mercs_not_allowed_to_loot_money:0 "我々の傭兵による、行軍の過程での好き放題の略奪は防がれているが、我々に余分な賃金による多大なコストをかけている。"
  mercs.4.t:0 "熟練兵が[veteran_mercs.GetName]に群がる"
