--- a/source/localisation/messages_l_english.yml
+++ b/source/localisation/messages_l_english.yml
@@ -3106,7 +3106,7 @@
  OFFACCMILOTHER_3:0 "$RECIPIENT$"
  OFFACCMILOTHER_4:0 "は以下の者からの軍事通行権の提供を受諾しました。"
  OFFACCMILOTHER_5:0 "$ACTOR$"
- OFFACCMILOTHER_6:0 "$ACTOR$のような小国の行動は我々の注目には値しません。"
+ OFFACCMILOTHER_6:0 "$ACTOR$のような小国の行動など注目に値しません。"
  OFFACCMILOTHER_LOG:0 "$RECIPIENT$は$ACTOR$からの軍事通行権の提供を受諾しました。"
  OFFACCMILOTHER_BTN1:0 "OK"
  OFFACCMILOTHER_BTN2:0 "OK"
