--- a/source/localisation/res_publica_l_english.yml
+++ b/source/localisation/res_publica_l_english.yml
@@ -467,8 +467,8 @@
  ideagroups.1807.d:0 "我が国の従属国を担当する部署は、統治対象と隔絶しており、尊大になっている。首都にいない者たちの声を聞く価値などないと考えているのだ。植民地や属国の怒りは沸騰している。"
  ideagroups.1807.a:0 "彼らは何様のつもりだ？"
  ideagroups.1808.t:0 "諜報網は破壊された"
- ideagroups.1808.d:0 "我々の外交官の中には、主要な諜報活動に関係している者もいる。今、我々が送る大使や使者はすべて、諜報員となる疑いがあり、任命された任務を終えると、最も厳しい審査の対象となる。我々の評判を回復するには時間がかかるだろう。"
- ideagroups.1808.a:0 "これは信頼の欠如への失望だ。"
+ ideagroups.1808.d:0 "我々の外交官の何人かに、大規模な諜報活動への関与の疑いがかかっている。今や、我々が送る大使や使者すべてが諜報員なのではと怪しまれており、離任の際に非常に厳しい尋問を受けている。我々の評判を回復するには時間がかかるだろう。"
+ ideagroups.1808.a:0 "信頼されないというのは残念なことだ。"
  ideagroups.1809.t:0 "見当違いの要求"
  ideagroups.1809.d:0 "我々が属国に迫った圧力は首都では妥当と思われるかもしれないが、我々の要求のいくつかは、保護下に置いた小規模な王家によって侮辱されているものもある。条項の交渉には予想以上に時間がかかるだろう。"
  ideagroups.1809.a:0 "我々は待つことができる。"
