Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -472,7 +472,7 @@
  HAS_GOVERNMENT_MECHANIC:0 "政府には$MECHANIC$の機構があります。\n"
  NOT_HAS_GOVERNMENT_MECHANIC:0 "政府に$MECHANIC$の機構がありません。\n"
  CHAR_CULTURE_CHANGE:0 "$WHO$は$CUL|Y$になります。\n"
- CHAR_RELIGION_CHANGE:0 "$WHO$は$CUL|Y$になります。\n"
+ CHAR_RELIGION_CHANGE:0 "$WHO$は$REL|Y$になります。\n"
  ADVISOR_CULTURE_RELIGION:1 "$NAME|Y$は$CUL|Y$$REL|Y$です。"
  EMBRACED:0 "受容"
  PRESENT:0 "存在"
@@ -977,7 +977,7 @@
  SIEGEINFO_MECHANICS:0 "§G+1d$DICE$§!はまた、各包囲チェックで追加されます（§Y$POSS$§!から$POSS2$§!）\n§Y$STORE$§!次第で次のチェックまで要塞の状態が保持されます。\n総包囲値が少なくとも§Y$WIN$§!の時に包囲チェックが行われると包囲側が勝利します。守備側の防衛力は包囲チェックがどれほど頻繁に起こるかに影響し、次のチェックは§Y$DATE$§!に行われるでしょう。\nこの要塞がその日に陥落する可能性は§Y$CHANCE$%§!です。"
  SUPPLIES_SHORTAGE:0 "供給不足"
  LEDGER_CASH:0 "¤"
- SCORE_GREATPOWER:0 "列強：§G+$VAL$§!\n"
+ SCORE_GREATPOWER:1 "列強：§G$VAL$§!\n"
  ADM_SCORE_INCOME:0 "月収：§G+$VAL$§!\n"
  ADM_SCORE_TECH:0 "統治技術：§G+$VAL$§!\n"
  ADM_SCORE_PROVS:0 "州：§G+$VAL$§!\n"
@@ -1127,12 +1127,12 @@
  NOT_ENOUGH_BACKERS_IMP_REFORM:0 "議会において改革のための十分な支持がありません、§G$FOR$§!がそれに賛成し、§R$AGAINST$§!が反対しています！"
  NOT_ENOUGH_AUTHORITY_IMP_REFORM:0 "少なくとも§R$COST$§!の帝国の権威が必要ですが、§Y$CURR$§!しか持っていません。"
  ENACT_REFORM:0 "§Y$REFORM$§!の制定により、あなたの帝国の権威はすべて削除されます。"
- MEMBER_BACKING_DUE_TO:0 "彼らは以下の要因により「§G$REFORM$§!」を支持しています：（$SCORE$）"
- MEMBER_OPPOSE_DUE_TO:0 "彼らは以下の要因により「§R$REFORM$§!」に反対しています：（$SCORE$）"
+ MEMBER_BACKING_DUE_TO:1 "彼らは以下の改革を支持しています（$SCORE$）：\n$REFORMS$\n要因：\n"
+ MEMBER_OPPOSE_DUE_TO:1 "彼らは以下の改革に反対しています（$SCORE$）：\n$REFORMS$\n要因：\n"
  FOLLOWING_BACK_IMP_REF:0 "§Y$COUNT$§!の君主が改革に賛成しています：\n$WHO$"
  ALL_AGAUNST_IMP_REF:0 "§R$COUNT$§!の君主が改革に反対しています：\n$WHO$"
  HEIR_CHANCE_TOOLTIP:0 "後継者を得る可能性は$CHANCE$に補正されます。"
- HEIR_CHANCE_TOOLTIP2:0 "我々の後継者が死去するか継承された場合は、我々が後継者を得る可能性は$CHANCE$に補正されます。"
+ HEIR_CHANCE_TOOLTIP2:1 "我々の後継者が死去するか廃嫡された場合は、我々が後継者を得る可能性は$CHANCE$に補正されます。"
  HEIR_WHY_TT:0 "要因：\n$WHY$"
  CAN_NOT_BUILD_BUILDING_IN_PROVINCE:1 "$PROVINCE$に$BUILDING$は建設できません"
  CAN_BUILD_BUILDING_IN_PROVINCE:0 "$PROVINCE$に$BUILDING$を建設できます"
@@ -1306,7 +1306,6 @@
  DEFINE_QUEEN_EFFECT:5 "$CULTURE$$RELIGION$$AGE$$NAME|Y$$SKILLS$が新たな$CONSORT$となります。\n"
  DEFINE_HEIR_EFFECT_DYN:2 "$CLAIM$$CULTURE$$RELIGION$$AGE$$NAME$家の家族$SKILLS$が後継者となります。\n"
  MIL_UPKEEP_EXPLANATION:0 "$CURR$/$ALLOW$の指揮官：$COST$"
- MIL_UPKEEP_MOD_DESC:0 "$NUM|Y$人の指揮官を以下の要因により、登用（統治者と後継者は無償）できます："
  inverse_republican_tradition:0 "共和的伝統の欠如"
  republican_tradition:0 "共和的伝統"
  army_tradition:0 "陸軍の伝統"
@@ -3494,7 +3493,7 @@
  MACRO_WRONG_TECH:2 "§Y$BUILDING$には$TECH$（$LEVEL$）が必要です。§!"
  MACRO_NEED_BUILDING:0 "$BUILDING$を建設できるようにするためには、$BUILDING_NEEDED|R$を建設する必要があります。"
  MACRO_ALREADY_HIGHLEVEL:0 "$PROVINCE$にはすでに特殊建造物が建設されています。"
- MACRO_ALREADY_MANUFACTORY:0 "$PROVINCE$にはすでに工場が建設されています。"
+ MACRO_ALREADY_MANUFACTORY:1 "$PROVINCE$にはすでに工場が$NUM$建設されています。"
  MACRO_ONCE_IN_COUNTRY:0 "$BUILDING$はそれぞれの国で一度しか建設できません。"
  MACRO_REQUIREMENT_NOT_FULFILLED:0 "この州では$BUILDING$の条件が満たされていません。"
  MACRO_QUEUE:0 "$VAL|Y$ユニットを編成中："
@@ -4415,7 +4414,7 @@
  NO_POSSIBLE_POLICIES_AT_ALL:0 "現在制定できる利用可能な政策はありません。あなたはアイデアグループを完了することで政策が使用可能になります"
  TRADER_CHANGE:0 "変更"
  APH_ONLY_EUROPE:0 "ヨーロッパ大陸の州のみ追加することができます。"
- POWER_INC_TO_HERE:2 "この艦隊は§Y$NODE$§!ノードに交易力§Y$POW$§!を追加します。\nこれにより維持費に§R$MAIN$§!¤を費やしている間、我々の交易価値が§Y$CURRENTINCOME$§!¤から§Y$INCOME$§!¤（§Y$INCOMEDIFFERENCE$§!¤の増収）となります。\n合計の変化量は$PROFIT$¤の$DIR$となります。\n"
+ POWER_INC_TO_HERE:4 "この艦隊は§Y$NODE$§!ノードに交易力§Y$POW$§!を追加します。\nこれにより艦隊維持費に§R$MAIN$§!¤を費やしている間、我々の交易価値が§Y$CURRENTINCOME$§!¤から§Y$INCOME$§!¤（§Y$INCOMEDIFFERENCE$§!¤の$INCOMEDIR$）となる見込みです。\n合計の変化量は$PROFIT$¤の$DIR$となる見込みです。\n"
  DIR_PROF:0 "得る"
  DIR_LOSS:0 "失う"
  RESEARCH_WHEN:0 "§Y$DATE$§!には実行するのに十分な力を有しているでしょう。"
@@ -5026,3 +5025,24 @@
  SM_GUI_SCALE:0 "GUIスケール (テスト)"
  EmperorDLC:0 "Emperor"
  MATCHMAKING_PLAYER_NAME:0 "プレイヤー名\n重複してはいけません"
+ ARMY_UPKEEP_MOD_DESC:0 "We can support $NUM|Y$ generals and conquistadors (Rulers and their heirs are free), due to:"
+ NAVY_UPKEEP_MOD_DESC:0 "We can support $NUM|Y$ admirals and explorers (Rulers and their heirs are free), due to:"
+ ARMY_LEADER_LABEL:0 "Army: $CURR$/$FREE$$MISSION$"
+ NAVY_LEADER_LABEL:0 "Navy: $CURR$/$FREE$$MISSION$"
+ CV_RESEARCHED_ENGAGEMENT_TOOLTIP:0 "+ Improve Naval Engagement by §G+$NUM$§! (level $LEVEL$)"
+ CV_NOTRESEARCHED_ENGAGEMENT_TOOLTIP:0 "§g- Improve Naval Engagement by §G+$NUM$§g (level $LEVEL$)§W"
+ ENGAGEMENT_WIDTH:0 "Naval Engagement Width"
+ ENGAGEMENT_WIDTH_INCREASE:0 "Naval Engagement increased by §G$VALUE$§W.\n"
+ OL_UNIT_CARPET_SIEGE:0 "Carpet Sieging"
+ HicSuntDraconesDLC:0 "Hic Sunt Dracones"
+ IS_CURRYING_FAVORS:0 "We are already currying favors with $WHO$."
+ IS_NOT_CURRYING_FAVORS:0 "But we are not currying favors with $WHO$."
+ CURRYFAVORSDESC:0 "Curry favours with them will increase our favors over time."
+ CANCEL_CURRYFAVORSDESC:0 "By no longer attempting to curry favours, we may slowly lose our gains."
+ CURRY_FAVORS_DESC:0 "Do you wish to send our diplomat to curry favvors with §Y$COUNTRY$§W?\nEach month the diplomat will, depending heavily on our diplomatic reputation, increase the amount of favors they owe us!"
+ CANCEL_CURRY_FAVORS_DESC:0 "Do you wish to recall our diplomat who is currying favors with §Y$COUNTRY$§W?\nWhen he stops working, the favors they owe us may slowly decline."
+ CURRYFAVORS:0 "Curry Favors"
+ CURRYFAVORSTITLE:0 "Curry Favors"
+ CANCEL_CURRYFAVORS:0 "Cancel Curry Favors"
+ CANCEL_CURRYFAVORSTITLE:0 "Cancel Curry Favors"
+ CARPET_SIEGE_MISSION_DESC:0 "Carpet Sieging"
