--- a/source/localisation/areas_regions_l_english.yml
+++ b/source/localisation/areas_regions_l_english.yml
@@ -860,22 +860,22 @@
  micronesia_area:1 "東ミクロネシア"
  micronesia_area_name:0 "ミクロネシア"
  micronesia_area_adj:0 "ミクロネシア"
- western_australia_area:0 "オーストラリア西部"
+ western_australia_area:2 "Perth"
  western_australia_area_name:0 "パース"
  western_australia_area_adj:0 "パース"
  top_end_area:0 "トップエンド"
- top_end_area_name:0 "オーストラリア"
- top_end_area_adj:0 "オーストラリア"
- northern_australia_area:0 "オーストラリア北部"
- northern_australia_area_name:1 "バイアリ"
- northern_australia_area_adj:1 "バイアリ"
- eastern_australia_area:0 "オーストラリア東部"
- eastern_australia_area_name:0 "クイーンズランド"
- eastern_australia_area_adj:0 "クイーンズランド"
- murray_river_area:0 "マレー川"
- murray_river_area_name:0 "ウェルガイア"
- murray_river_area_adj:0 "ヴェルガイア"
- southern_australia_area:0 "オーストラリア南部"
+ top_end_area_name:1 "Top End"
+ top_end_area_adj:1 "Top Ender"
+ northern_australia_area:1 "Capricornia"
+ northern_australia_area_name:2 "Capricornia"
+ northern_australia_area_adj:2 "Capricornian"
+ eastern_australia_area:1 "New South Wales"
+ eastern_australia_area_name:1 "New South Wales"
+ eastern_australia_area_adj:1 "New South Welsh"
+ murray_river_area:1 "Princeland"
+ murray_river_area_name:1 "Princeland"
+ murray_river_area_adj:1 "Princelander"
+ southern_australia_area:1 "Victoria"
  southern_australia_area_name:0 "ビクトリア"
  southern_australia_area_adj:0 "ビクトリア"
  eastern_polynesia_area:0 "東ポリネシア"
@@ -887,12 +887,9 @@
  polynesia_area:0 "ポリネシア"
  polynesia_area_name:0 "ポリネシア"
  polynesia_area_adj:0 "ポリネシア"
- te_ika_a_maui_area:0 "テ・イカ・ア・マウイ"
- te_ika_a_maui_area_name:0 "テ・イカ・ア・マウイ"
- te_ika_a_maui_area_adj:0 "マオリ"
  te_waipounamu_area:0 "テ・ワイポウナム"
  te_waipounamu_area_name:0 "テ・ワイポウナム"
- te_waipounamu_area_adj:0 "マオリ"
+ te_waipounamu_area_adj:1 "Southern Maori"
  western_sahara_area:0 "西サハラ"
  western_sahara_area_name:0 "アザワド"
  western_sahara_area_adj:0 "アザワド"
@@ -1230,19 +1227,19 @@
  red_river_delta_area:0 "ソンホン"
  red_river_delta_area_name:0 "ベトナム"
  red_river_delta_area_adj:0 "ベトナム"
- vietnam_area:1 "トンキン"
- vietnam_area_name:1 "トンキン"
- vietnam_area_adj:0 "トンキン"
+ vietnam_area:2 "Annam"
+ vietnam_area_name:2 "Annam"
+ vietnam_area_adj:1 "Annamese"
  south_laos_area:0 "南ラオス"
  south_laos_area_name:0 "ヴィエンチャン"
  south_laos_area_adj:0 "ヴィエンチャン"
- north_laos_area:0 "北ラオス"
+ north_laos_area:1 "Luang Prabang"
  north_laos_area_name:0 "ルアンパバーン"
  north_laos_area_adj:0 "ルアンパバーン"
  central_thai_area:0 "タイ中部"
  central_thai_area_name:0 "アユタヤ"
  central_thai_area_adj:0 "アユタヤ"
- northern_thai_area:0 "タイ北部"
+ northern_thai_area:1 "Chiang Mai"
  northern_thai_area_name:0 "ラーンナー"
  northern_thai_area_adj:0 "ラーンナー"
  great_moluccas_area:0 "大モルッカ"
@@ -2824,3 +2821,27 @@
  andes_superregion:0 "アンデス"
  andes_superregion_name:0 "アンデス"
  andes_superregion_adj:0 "アンデス"
+ fiji_area:0 "Fiji"
+ fiji_area_name:0 "Fiji"
+ fiji_area_adj:0 "Fijian"
+ north_queensland_area:0 "Queensland"
+ north_queensland_area_name:0 "Queensland"
+ north_queensland_area_adj:0 "Queenslander"
+ south_queensland_area:0 "Brisbane"
+ south_queensland_area_name:0 "Brisbane"
+ south_queensland_area_adj:0 "Brisbaner"
+ illawara_area:0 "Illawara"
+ illawara_area_name:0 "Illawara"
+ illawara_area_adj:0 "Illawara"
+ pilbara_area:0 "Pilbara"
+ pilbara_area_name:0 "Pilbara"
+ pilbara_area_adj:0 "Pilbaran"
+ tasmania_area:0 "Tasmania"
+ tasmania_area_name:0 "Tasmania"
+ tasmania_area_adj:0 "Tasmanian"
+ te_ika_a_maui_hauauru_area:0 "Te Ika a Maui Hauauru"
+ te_ika_a_maui_hauauru_area_name:0 "Te Ika a Maui Hauauru"
+ te_ika_a_maui_hauauru_area_adj:0 "Western Maori"
+ te_ika_a_maui_waho_area:0 "Te Ika a Maui Waho"
+ te_ika_a_maui_waho_area_name:0 "Te Ika a Maui Waho"
+ te_ika_a_maui_waho_area_adj:0 "Eastern Maori"
