--- a/source/localisation/dharma_l_english.yml
+++ b/source/localisation/dharma_l_english.yml
@@ -420,7 +420,7 @@
  REFORM_LEVEL_NEEDS_PREVIOUS_DESC:0 "これらを選択する前に、前列を制定する必要があります。"
  CURRENT_REFORM_PROGRESS:0 "$POINTS$の政府改革進捗度を保有しています。次の改革を制定するには$REQPOINTS|Y$必要です。"
  NEXT_REFORM_EXPECTED:0 "そこに到達するのは$WHEN|Y$と予測されます。"
- REFORM_PROGRESS_MODIFIER_DESC:2 "以下の理由により、毎月$POINTS|Y$を獲得します：$FROM_AUTONOMY$$FROM_BUILDINGS$\n\n自治率が低いほど政府改革進捗度は速く貯まります。"
+ REFORM_PROGRESS_MODIFIER_DESC:3 "You gain $POINTS|Y$ every month due to:$FROM_AUTONOMY$$FROM_BUILDINGS$$FROM_MONTHLY$\n"
  REFORM_INCREASED_COST:1 "改革のレベルが上がるごとに§Y50§!ずつコストが上昇します。"
  YELLOW_TEXT:0 "$NAME|Y$"
  GREEN_TEXT:0 "$NAME|G$"
@@ -800,7 +800,7 @@
  ASSIMILATED_CULTURE_GROUPS_TOOLTIP_DESC:0 "同化した文化グループは、さまざま異なるボーナスを与えます。あるグループは、そのグループに所属する文化を持つすべての州を領有した際に同化されます。もし、あなたがこれらの州をすべて持っていなければ、ボーナスは失われます。"
  ADOPT_GOVERNMENT_PROGRESS:0 "$TO|Y$は$FROM|Y$が現在の改革に費やした政府改革進捗度を獲得します。\n"
  REFORM_DESELECTED_TITLE:0 "政府改革の廃止"
- REFORM_DESELECTED_DESC:1 "あなたの国の変化により、政府改革$REFORM|Y$は実行不可能になったため廃止されました。"
+ REFORM_DESELECTED_DESC:2 "Changes in your Country have led to the Reform $REFORM|Y$ no longer being viable and it has now been abolished."
  estate_church_bribe:0 "聖職者を懐柔"
  estate_nobles_bribe:0 "貴族を懐柔"
  estate_burghers_bribe:0 "商人を懐柔"
@@ -960,11 +960,16 @@
  brahmins_estate_events.9.b.tt:2 "§Yバラモン§!階級の土地占有率とほぼ等しい§Yヒンドゥー教§!の領有州の一部は、§Y15年§!間§Y「非バラモン宗教運動」§!を獲得し、以下の効果を得ます：\n州不穏度：§G-5.00§!\n月自治率変化：§R+0.05%§!"
  GOV_REVOLUTIONARY_REPUBLIC:0 "革命共和国"
  GOVERNMENT_DESELECTED_TITLE:0 "政府の廃止"
- GOVERNMENT_DESELECTED_DESC:0 "あなたの国の変化により、政府$REFORM|Y$は実行不可能になったため廃止されました。政府は$REPLACEMENT|Y$に変更されます。"
+ GOVERNMENT_DESELECTED_DESC:1 "Changes in your Country have led to the Government $REFORM|Y$ no longer being viable and it has now been abolished. It has been replaced with $REPLACEMENT|Y$."
  RAJPUT_DESC:2 "§Yラージプート§!階級に特別な権限を与えることにより、我々は彼らの精鋭の戦士たちへのアクセスを取得します。ラージプートは平均的な部隊よりも士気が高く、補充が安上がりで、訓練ボーナスを長期間保持できます。"
  CHANGE_REFORM_CANT_AFFORD:0 "$COST|R$を持っていないため、政府改革を変更できません。"
- REFORM_PROGRESS_DEV:1 "§Y$LOCALAUTONOMY$%§!の平均州自治率から$POINTS|G$\nこの計算式は年間$BASE|+=0$に（§Y100－平均自治率§!）を乗じたものです。\n\n"
- REFORM_PROGRESS_BUILDINGS:0 "\n裁判所と役所から$POINTS|G$"
+ REFORM_PROGRESS_DEV:4 "\n $POINTS|G$ from an average local autonomy of §Y$LOCALAUTONOMY$%§!\nThe formula for calculating this is $BASE|+=0$ per year divided by (12 * (100-§Y$LOCALAUTONOMY$%§!)).\n"
+ REFORM_PROGRESS_BUILDINGS:1 "\n $POINTS|G$ from Buildings"
  COMPANY_PRICE_CALC:0 "基本：$BASE|Y0$¤\n自国の植民範囲 §G$RANGE|0$§!¤\n$MIN|0Y$¤以下になることはありません"
  CHARTER_COMPANY_WE_AT_WAR:0 "戦争時に勅許会社を求めることはできません"
  CHARTER_COMPANY_THEY_AT_WAR:0 "戦争中の国に勅許会社を求めることはできません"
+ jains_estate_events.3.a:0 "Accept"
+ mechanic_raze_province_yes:0 "Can Raze Provinces"
+ mechanic_raze_province_no:0 "Can NOT Raze Provinces"
+ NO_CARPET_SIEGE_MOVING:0 "§RYou cannot manage Carpet Sieging while moving§!\n"
+ COT_NOT_ENOUGH_DEVELOPMENT:0 "§RUpgrading to a $UPGRADE_NAME|Y$ requires $NEED$ development, but this province only have $CURR$"
