--- a/source/localisation/modifers_l_english.yml
+++ b/source/localisation/modifers_l_english.yml
@@ -1136,7 +1136,7 @@
  expansionist_country:0 "拡張政策"
  desc_expansionist_country:0 "我々の新たな領地の急速な統合は、我々に支配の尊重と価値ある教訓の両方をもたらした。"
  army_enthusiasm:0 "陸軍への熱意"
- desc_army_enthusiasm:0 "常備軍の創設に投資する我々の意欲により、軍隊に対する熱意が波及している。身分を問わず軍隊経歴を求めており、我々の採用担当者は、かつては希望する人を受け入れていたが、今では選択の余地がある。"
+ desc_army_enthusiasm:1 "Our willingness to invest in the creation of standing armies have led to a wave of enthusiasm for the army. Many are seeking army careers both among commoners and the more well to do and our recruiters now have the luxury of choice where they might in the past have had to accept whoever was interested."
  hegemonic_ambition:0 "覇権への野望"
  desc_hegemonic_ambition:0 "我々の領土拡張と自国の疑う余地のない指導力は、国際的な尊敬と国内の団結の強化へ繋がっている。"
  influential_diplomacy:0 "影響力のある外交官"
@@ -2214,8 +2214,8 @@
  desc_basque_fisheries_modifier:0 "水産業への投資が報われ、我々は現在財政上の利益を享受している。"
  basque_exploration:0 "バスクの探検家たち"
  desc_basque_exploration:0 "我らの勇敢な船員たちは捕鯨のためのより豊かな海域を探し、海を越えさらなる冒険を始めている。"
- nav_newfoundland:0 "グランバヤ交易"
- desc_nav_newfoundland:0 "我々はグランバヤの交易を支配し、この地域の資源の独占を確立した。"
+ nav_newfoundland:1 "Granbaia Trade"
+ desc_nav_newfoundland:1 "We have dominated trade in the Granbaia, establishing a monopoly on the resources of the region."
  nav_reclaimed_coast:0 "海岸の奪還"
  desc_nav_reclaimed_coast:0 "我々は失った海岸をようやく取り戻した！"
  conquest_of_espainiako:1 "イスパニア征服"
