--- a/source/localisation/achievements_l_english.yml
+++ b/source/localisation/achievements_l_english.yml
@@ -99,7 +99,7 @@
  NEW_ACHIEVEMENT_6_18_DESC:0 "琉球として、全世界を自国か従属国が領有する。"
  NEW_ACHIEVEMENT_6_19_NAME:0 "ジハード"
  NEW_ACHIEVEMENT_6_19_DESC:0 "ナジュドとして、スンナ派の州を500保有する。"
- NEW_ACHIEVEMENT_6_21_NAME:0 "サンセット・インヴェージョン"
+ NEW_ACHIEVEMENT_6_21_NAME:0 "日沈む地からの侵略"
  NEW_ACHIEVEMENT_6_21_DESC:0 "アステカでリスボン、マドリード、パリ、ロンドン、アムステルダム、ローマを中核州にする。"
  NEW_ACHIEVEMENT_6_22_NAME:0 "アイルランドの民ならば"
  NEW_ACHIEVEMENT_6_22_DESC:0 "アイルランドの国家でブリテン諸島を中核州にする。"
@@ -619,3 +619,19 @@
  NEW_ACHIEVEMENT_60_NAME:0 "最も神聖なるローマ帝国"
  NEW_ACHIEVEMENT_60_DESC:0 "教皇領か皇帝のどちらかとなり、帝国の公式な信仰をカトリックとしたうえで教皇領を選帝侯にする。"
  NEW_ACHIEVEMENT_48_DESC:0 "任意の覇権として100%の力に到達する。"
+ NEW_ACHIEVEMENT_61_NAME:0 "Wonderful"
+ NEW_ACHIEVEMENT_61_DESC:0 "Own 8 different monuments on tier 3."
+ NEW_ACHIEVEMENT_62_NAME:0 "Spice Girls"
+ NEW_ACHIEVEMENT_62_DESC:0 "Having a female ruler, have active trading bonuses for Cloves, Spices, Salt and Sugar."
+ NEW_ACHIEVEMENT_64_NAME:0 "To the Bone"
+ NEW_ACHIEVEMENT_64_DESC:0 "As Bone, use pillage capital at least 7 times."
+ NEW_ACHIEVEMENT_65_NAME:0 "Keep the Flame Burning"
+ NEW_ACHIEVEMENT_65_DESC:0 "As a Zoroastrian nation, own all Religious Centers and Monument Baku Ateshgah on tier 3."
+ NEW_ACHIEVEMENT_66_NAME:0 "New, New Deli"
+ NEW_ACHIEVEMENT_66_DESC:0 "As Deli, have your capital in the Delhi province."
+ NEW_ACHIEVEMENT_67_NAME:0 "The Power of Three"
+ NEW_ACHIEVEMENT_67_DESC:0 "Own a Crown Colony, a Self-Governing Colony and a Private Enterprise."
+ NEW_ACHIEVEMENT_68_NAME:0 "Quizquiz Pro Quo"
+ NEW_ACHIEVEMENT_68_DESC:0 "As Quizquiz, have your capital in the Anjou province."
+ NEW_ACHIEVEMENT_69_NAME:0 "That's No Mon"
+ NEW_ACHIEVEMENT_69_DESC:0 "As Pegu, own at least 50 provinces that are not of the Mon culture."
