--- a/source/localisation/cossacks_l_english.yml
+++ b/source/localisation/cossacks_l_english.yml
@@ -179,10 +179,7 @@
  THREATENED_ATTITUDE_CANNOT_SET_DISTANCE:0 "§R§Y$COUNTRY$§!は§Y$PLAYER$§!を脅かす立場にはないため、外交姿勢を§Y脅威§!に設定することはできません。§!"
  THREATENED_ATTITUDE_DESC:0 "あなたの外交姿勢を§Y脅威§!に設定することは§Y$COUNTRY$§!を恐れていることを示しています。彼らはあなたが安全のために同盟することを喜んでいる兆候と見ますが、また、あなたが彼らに対抗して自身を保護するため、他の強力な同盟国を求めていると見ています。"
  TRUST_DESC:1 "§Y信頼度§!は§Y$COUNTRY$§!との同盟の強さの尺度です。我々が約束を破るか、そうでなければ彼らに対して不名誉に行動すると、それは減少します。これは、好感度を使うことで増やすことができます。あなたが同盟を結んでいるか、または一方が他方の従属国である限り、信頼度は時間とともに増加します。"
- FAVORS_INSTANT:0 "§Y$COUNTRY$§!は我々に§Y$NUM$§!の好感度を抱いています。"
- FAVORS_INSTANT_ALLY:2 "彼らと同盟していることで、$YEARS|Y$年ごとに好感度を得られます。好感度を得るために必要な年数は、我が国と相手国の相対的な強さに依存します。我々は次回§Y$YEAR$年§!中に好感度を獲得するでしょう。"
- FAVORS_INSTANT_NOT_OFFENSIVE_CALL:0 "我々が彼らの攻撃戦争に参戦拒否しているため、我々は新たに好感度を得ることができず、既存の好感度も時間と共に減少します。"
- FAVORS_INSTANT_NOT_ALLY:0 "我々は彼らと同盟していないため、新たに好感度を得ることができず、既存の好感度は時間と共に減少します。"
+ FAVORS_INSTANT:1 "§Y$COUNTRY$§! owes us §Y$NUM|2$§! Favor(s)."
  FAVORS_DESC:0 "§Y好感度§!は、戦争中に彼らを助けたり、我々の戦争で彼らが望む土地を与えるなど、過去に我々が彼らに対して行った善行に対して§Y$COUNTRY$§!がどれほど恩義を負っているかの尺度です。それは、我々に対する信頼度を高めたり、他の国との戦備を整えるよう求めたり、もしくは彼らに領土的利益を約束していない戦争に彼らを参戦させることで消費されるでしょう。"
  TRUST_HIT_FROM_NO_LAND:0 "§Y$WHO$§!は、彼らが§Y$CONT$%§!の戦争貢献度から期待しているものを下回る州しか与えられておらず、彼らの信頼度は§R$AMT$§!減少しています。"
  EXPECTS_BIGGER_DEAL:0 "\n\n$WHO|Y$はより良い取引のために、我々が彼らに圧力をかけることができると信じています。"
@@ -1308,7 +1305,7 @@
  EST_CRUSHED_BURGHERS:0 "市民は抑圧されました"
  EST_CRUSHED_NOMADIC_TRIBES:0 "部族は抑圧されました"
  EST_CRUSHED_CHURCH:0 "聖職者は抑圧されました"
- curtail_estate_noble_title:0 "貴族を抑圧"
+ curtail_estate_noble_title:0 "貴族階級の抑制"
  curtail_estate_noble_desc:0 "我々の政府は貴族によって運営されている。より集中的な支配を採用することで、権力と特権を縮小する必要があります。"
  curtail_estate_church_title:0 "聖職者を抑圧"
  curtail_estate_church_desc:0 "我々の国教会は、国家の世俗的な問題に大きな影響を及ぼしている。国家問題への影響を制限するためには、権力と特権を縮小する必要がある。"
@@ -1479,3 +1476,11 @@
  BLOCK_OFFENSIVE_WARS_ENABLE_DESC:1 "§Y$COUNTRY$§!に対し我々は彼らの攻撃的な戦争に参加しないことを伝えます。これはまた好感度の蓄積を止め、彼らがあなたなしでも管理できると考えれば、同盟を終了する可能性があります。クリックすると再び攻撃的な戦争に参加することを伝えます。"
  AI_WANTS_PROVINCES:0 "\n\n$WHO|Y$は以下の州に関心を持っています：$LIST$。"
  COSSACKS_DESC:2 "§Yコサック§!階級に特別な権限を与えることにより、我々は軍隊のために彼らの最高の騎手を雇うことができます。コサックは、平均的な騎兵連隊よりも多くの白兵ダメージを与えます。"
+ EST_VAL_ALLIANCE_ON_VC:1 "Alliance With $NAME$: §R$VAL|1$%§!"
+ FAVORS_GAIN_TOOLTIP:0 "We gains $VAL|+=2$ favor(s) each month due to:\n$WHY$"
+ FAVOR_ALLIANCE_TT:0 "Allied: Relative Strength: $VAL|+=2$"
+ FAVOR_ALLIANCE_BLOCKED_TT:0 "Refused Offensive Wars: $VAL|+=2$"
+ FAVOR_CURRY_FAVORS_REP_TT:0 "Currying Favors (Diplomatic Reputation): $VAL|+=2$"
+ FAVOR_CURRY_FAVORS_OPINION_TT:0 "Currying Favors (Opinion): $VAL|+=2$"
+ FAVOR_LACK_OF_ALLIANCE_TT:0 "Lack of Alliance: $VAL|+=2$"
+ BUILD_UNIT_ONLY_TRANSPORTS:0 "§RCan only build transports!§!\n"
