--- a/source/localisation/eldorado_l_english.yml
+++ b/source/localisation/eldorado_l_english.yml
@@ -287,7 +287,7 @@
  seven_cities_events.402.d:0 "$PROVINCENAME$の血なまぐさい大虐殺は、原住民が日常的に黄金の探検家たちを攻撃したとき、ペラルタ族の生存者をほとんど残さなかった。生き残った人々は、我らがコンキスタドールと探検隊の兵士の助けを借りることを懇願し、彼らの一族が復讐を果たした場合、多くの黄金を支払うことを約束した。"
  seven_cities_events.402.a:0 "彼らが必要とするものは何でも。我々が黄金を得られる限り！"
  seven_cities_events.402.b:0 "探検隊にはより多くの差し迫った問題がある。"
- seven_cities_events.403.t:0 "金とダイヤモンド"
+ seven_cities_events.403.t:0 "金とダイアモンド"
  seven_cities_events.403.d:0 "ペラルタ族の生き残った者たちは、我々を大虐殺の場に導いた。死体はそのまま残っていて、荷馬車は破壊されていた…我々の探検隊は死体を埋葬するのを助け、いくつかの斥候が攻撃者の兆候を捜索した。いくつかの手がかりがペラルタの金鉱山へと導き、彼らが近づくにつれて攻撃者が鉱山に避難したことが明らかになった。ペラルタ族の一人は、それが彼らを攻撃したのと同じ集団であることを確認した。激しい戦闘の後、敵は鉱山の外の大地で死んでいた。ペラルタ族は彼らの約束を守り、我々に多くの黄金で報いた。"
  seven_cities_events.403.a:0 "誠実に働かせるには誠実に対価を支払わねば。"
  seven_cities_events.404.t:0 "水晶と黄鉄鉱"
