--- a/source/localisation/emperor_estates_l_english.yml
+++ b/source/localisation/emperor_estates_l_english.yml
@@ -322,7 +322,7 @@
  estate_brahmins_flexible_deities_revoke_tooltip:1 "この決断は§Y25§!の正統性を消費することで、§Y20§!年ごとに個人の主神を変更することを可能にします。"
  estate_maratha_levies:0 "徴兵の拡大"
  estate_maratha_levies_for_muslims:0 "マラーター動員数の増加"
- estate_maratha_levies_for_muslims_effect_tooltip:0 "§Yヒンドゥー教§!の領有州はすべて、§Y「マラーター徴兵の増加」§!を獲得し、以下の効果を得ます：\n州人的資源補正：§G+20.0%§!"
+ estate_maratha_levies_for_muslims_effect_tooltip:1 "Every owned province of §YHindu§! faith gains §Y'Increased Maratha Recruitment'§!, giving the following effects:\nLocal Manpower Modifier: §G+30.0%§!"
  estate_maratha_levies_for_muslims_revoke_tooltip:0 "§Y「マラーター動員数の増加」§!の補正は、領有する全ての§Yヒンドゥー教§!の州から取り除かれます。"
  estate_maratha_levies_for_muslims_mod:0 "マラーター動員数の増加"
  desc_estate_maratha_levies_for_muslims_mod:0 "国はマラーターの動員を増加させている。"
@@ -702,7 +702,7 @@
  sending_condottieri_to_them:0 "§Y[Root.GetName]§!はコンドッティエーリを§Y国家§!に貸し出している。"
  is_root_religion:0 "§Y[Root.Religion.GetName]§!である。"
  pay_crown_land:0 "直轄地の利用を許可"
- estate_church_propagate_religion_trigger_tooltip:1 "§Y[agenda_trade_node.GetTradeNodeName]§!交易ノードにあるすべての州が§Y[Root.Religion.GetName]§!信仰に従っている。"
+ estate_church_propagate_religion_trigger_tooltip:2 "All inhabited provinces in the §Y[agenda_trade_node.GetTradeNodeName]§! trade node follow the §Y[Root.Religion.GetName]§! faith, or follow a Christian, Muslim, or Jewish faith."
  agenda_automatically_completed_explain_dhimmi:0 "§Y[agenda_province.GetName]§!の州自治率が§R25%§!増加します。"
  estate_nobles_protect_our_culture_effect_tooltip:0 "征服された場合、§Y[agenda_province.GetName]§!は§G5§!年間分離主義を失います。"
  owned_by_country_of_root_religion:0 "§Y[Root.Religion.GetName]§!信仰の国家によって領有されている。"
@@ -1239,3 +1239,4 @@
  CROWNLAND:0 "直轄地"
  seize_land_rebels_tt:0 "いずれかの階級の忠誠度が§R30§!を下回ると、反乱軍が蜂起する可能性があります。"
  no_other_mil_privilege:0 "§Y月間軍事力§!を付与する他の階級特権がない"
+ desc_increase_crown_land_share:0 "By centralizing the ownership of the land in royal hands, we can control the widespread power of the Estates much better."
