--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -8,7 +8,7 @@
  conquer_states_desc:0 "我々が拡大するにつれ、我々が征服した新しい土地を真に統治機構へと統合できるようにする必要がある。征服の後、征服された領土に真の[Root.GetAdjective]の支配を確立するのは困難な作業である。"
  assemble_an_army_title:0 "軍の構築"
  assemble_an_army_desc:0 "我々の領土的野心には偉大な軍隊が必要である。我々は、我が国の統治下で国家を守り、拡大できる強力な常設軍を構築し、維持しなければならない。"
- unite_home_region_title:0 "中心地域の結束"
+ unite_home_region_title:0 "地盤地方の統合"
  unite_home_region_desc:0 "試練に対し成功可能な軍事機構を構築するため、我々が尽力すべき時が来た。我々は、我々の地域の真の覇権者となり、すべての人に尊敬され、恐れられなければならない。"
  diplomatic_missions:0 "外交任務"
  building_alliances_title:0 "信頼できる同盟国"
@@ -483,10 +483,10 @@
  african_wealth_mission_desc:0 "アフリカには黄金、コーヒー、象牙が豊富である。我々は、経済的な独立を確立できるよう、少なくとも、これらの稀少品の公正な配分を確実に支配できるようにしなければならない。"
  new_world_modernization_title:0 "新世界の近代化"
  new_world_modernization_desc:0 "ヨーロッパの植民地主義は、我々が迅速に適応しなければ国家を滅ぼす恐れがある。我々は彼らに挑戦する技術と国家機構を持たなければならない。"
- new_world_remove_euro_title:0 "白人の追放"
+ new_world_remove_euro_title:0 "ヨーロッパ人の追放"
  new_world_remove_euro_desc:0 "侵略的なヨーロッパ人は、急速に新世界を征服しており、我々の伝統的な故郷にも拡大している。彼らを船へと追いやる必要がある。"
  new_world_remove_euro_toolip:0 "非ヨーロッパ国家あるいはそれらの植民地が、あなたの首都圏の州を所有している。"
- nw_sunset_invasion_title:0 "日没からの侵略"
+ nw_sunset_invasion_title:0 "日沈む地からの侵略"
  nw_sunset_invasion_desc:0 "侵略者たちは我が国から逃げ出した。しかしそれで十分だろうか？いつでも、彼らはより恐ろしい軍隊とともに戻ってくるかもしれない。我々は彼らをヨーロッパへと追跡しよう。"
  gen_eur_trade_node_title:0 "国際的な優勢"
  gen_eur_trade_node_desc:0 "富の獲得は一つの方法である。しかし、他のすべてよりも裕福であることは、真の優越の証である。我々の母国の交易ノードを成長させ、その支配権を保有しよう。"
@@ -1070,8 +1070,8 @@
  hin_riches_desc:0 "インドは世界の大部分の絹やダイヤモンド、香辛料、織物を生産している。これら交易品の独占権を確立せねばならない。"
  hin_arabian_trade_title:0 "アラビア交易"
  hin_arabian_trade_desc:0 "インドの輸出品は大部分がアラビアの市場にたどり着く。製造工場だけでなく、また販売所も支配する事によって、間違いなく我々の利益を増やす事ができる。"
- tau_conquer_prome_title:0 "ピイの併合"
- tau_conquer_prome_desc:0 "アヴァ王国の支配との闘いもシャン戦争の渦中で必死で生き残ろうとしている事も、近隣のピイの都市国家と多くを共有している。残念ながら、彼らは我が拡張の通り道に立ちふさがっているので、完全併合せねばならない。"
+ tau_conquer_prome_title:1 "Defeat Our Rival"
+ tau_conquer_prome_desc:1 "The path to a great empire begins with a small victory. With the defeat of our immediate rivals we show ourselves to be a contender for glory."
  tau_conquer_ava_title:0 "パガン王国の復活"
  tau_conquer_ava_desc:0 "アヴァ王国はシャンのソーボワを巡る緩やかな覇権を通じてパガンの遺産を続けているフリをしている。アヴァへの貢物をやめ、自らパガンのマントを取り上げなければならない。"
  tau_conquer_shan_title:0 "シャン支配の終焉"
@@ -1080,7 +1080,7 @@
  tau_pacify_shan_desc:0 "シャン・モン族のソーボワは少なくとも名目上は我が支配を受け入れているが、彼らの権力を完全に壊さない限り、彼らは絶えず存在する危険なものとなる。"
  tau_conquer_lxa_title:0 "百万の象"
  tau_conquer_lxa_desc:0 "おそらく誇張された統計値であるが、ラーンサーンには百万の象が存在すると言われている。ラーオの土地を侵略し、象を捕まえ、戦争のために象に装備を与えるべきだ。"
- tau_universal_ruler_title:0 "第一タウングー帝国"
+ tau_universal_ruler_title:1 "First Burmese Empire"
  tau_universal_ruler_desc:0 "パガン王国の崩壊以来、ビルマは分裂していて弱い。秩序を回復し、古き帝国の後を継いで、新帝国を勃興せねばならない。"
  tau_conquer_lanna_title:0 "百万の稲田"
  tau_conquer_lanna_desc:0 "ラーンナー王国はそれ自身が百万の稲田の土地と名付けている。誇りを持って自慢でき、不正確ではない彼らの穀倉地帯は、我々兵士の腹を満たすだろう。"
@@ -1107,7 +1107,7 @@
  tau_great_mandala.tooltip:0 "朝貢国以外の従属国の内、総開発度が§Y150§!以上あり、かつ独立欲求が§Y50§!以下の従属国が存在する。"
  gen_north_india_powerful_subject.tooltip:0 "朝貢国以外の従属国の内、総開発度が§Y50§!以上あり、かつ独立欲求が§Y50§!以下である従属国が存在する。"
  tau_dragon_throne_title:0 "竜の玉座の奪取"
- tau_dragon_throne_desc:0 "タウングーはこれまで目にした事がない偉大な帝国であろう。強大な中国でさえ、我が支配を承知しているだろう。竜の玉座を奪い、新しい帝国の王朝を宣言せねばならない。"
+ tau_dragon_throne_desc:1 "We shall be the greatest empire the world has ever seen. Even mighty China shall know our rule. We must seize the Dragon Throne and proclaim a new imperial dynasty."
  guj_walls_of_ahmadabad_mission_title:0 "[Root.Capital.GetCapitalName]の発展"
  guj_walls_of_ahmadabad_mission_desc:0 "我が首都[Root.Capital.GetCapitalName]は1411年に築かれて以来、急速に発展し、今すぐに衰退しそうにはないようだ。インド最大の港湾都市の一つであるカンバートの極めて近くであり、世界で最も賑わう港のいくつかによる事は、人や交易品、金が絶え間なく流通するのを保証している。\nしかし、余りに急速な発展をするこの都市は、特にグジャラート平原の中央部に位置するため、効果的に守る事が難しい。都市の計画にもっと積極的に参加すべきであり、都市を魅力的にする方法にだけ重視すべきではないと言う人もいる。建築家が提案した壁や砦の配置はぐらついているように見えるかもしれないが、代案は防衛がほぼない首都である。"
  dh_conquest_of_champaner_title:0 "チャーンパーネール征服"
@@ -1780,8 +1780,8 @@
  nav_north_sea_whaling_desc:0 "捕鯨は非常に儲かる事業である。我々は、鯨の群れを見つけるため、はるか北方まで航海する準備ができており、可能ならばその地域に交易所を設けなければならない。"
  nav_terranova_title:0 "テラ・ノヴァ"
  nav_terranova_desc:0 "世界で発見された最も豊かな鯨油の供給源は、広大な西の海の向こう、我々がテラ・ノヴァと呼ぶ土地の近くだ。この遠くの海岸に植民地を設立せねばならない。"
- nav_newfoundland_labrador_title:0 "グランバヤ交易"
- nav_newfoundland_labrador_desc:0 "グランバヤの交易を支配し、捕鯨船が交易で往復している最も利益の高い海岸をどんな国にも支配されないよう努めねばならない。"
+ nav_newfoundland_labrador_title:1 "Granbaia Trade"
+ nav_newfoundland_labrador_desc:1 "We must dominate trade in the Granbaia and ensure that no other nation controls the most lucrative coasts where our whalers ply their trade."
  nav_reclaim_coast_title:0 "海岸の奪還"
  nav_reclaim_coast_desc:1 "かつてナバラ王国には海岸線があり、それを自分のものとみなしていた。列強は無情にも我が国を内陸国にし、海から切り離し、我々が名高い船乗りの伝統を使うことを阻んでいる。この不当行為を直ちに正さねばならない。"
  nav_conquer_lapurdi_title:0 "ラプルディの征服"
@@ -1913,3 +1913,73 @@
  cas_spice_islands_tooltip:0 "§Y[Root.GetName]§!が§Yモルッカ§!地方内の全ての州を発見する"
  native_reductions_tooltip:0 "§Y北アメリカ§!と§Y南アメリカ§!で修道会が割り当てられたステートを§Y15§!つ、§Y[Root.GetName]§!かその従属国が領有する。"
  por_japan_mission_tooltip:0 "[Root.GetName]が§Y肥前§!の支配者と良好な関係の場合、イベント「§Y長崎のポルトガル人§!」が発生します。\nそうでない場合は、§G3.00§!の重商主義を獲得します。"
+ new_world_modernization_tag_title:0 "新世界の近代化"
+ new_world_modernization_tag_desc:0 "European colonialism threatens to wipe out our nation if we do not adapt rapidly. We must have the technology and state apparatus to challenge them."
+ reform_religion_title:0 "宗教の改革"
+ reform_religion_desc:0 "Religion is a central part of our culture, but it is also the root of many of our problems. The answer, obviously, is not to get rid of it, but to reform it instead."
+ native_income_mission_title:0 "高い収入"
+ native_income_mission_desc:0 "We must increase state income by any means necessary. Money is a requirement for any endeavor of the state, from the daily expenses of the government to the maintenance of armies to invade our enemies."
+ native_dominate_home_trade_node_title:0 "交易の支配"
+ native_dominate_home_trade_node_desc:0 "Our merchant communities have been growing stronger and stronger for a long time now. It is time we give them the help they require to truly dominate our domestic trade. No foreign power must be allowed to influence the well being of our subjects."
+ native_dev_capital_title:0 "首都の改善"
+ native_dev_capital_desc:0 "The core of our nation needs to be strong so that other nations look at us in awe. We must develop it."
+ native_treasury_title:0 "国庫の拡大"
+ native_treasury_desc:0 "A large treasury is an imperative buffer for all things that could befall us through. If this is seen as miserly, it is because some do not realize that this vice is the very essence of what it means to reign."
+ native_imperial_ambition_mission_title:0 "帝国の征服"
+ native_imperial_ambition_mission_desc:0 "Securing wealth must always be the foremost priority of our state. Let us make use of the expensive armies and fleets that our economic prosperity has bought us to acquire even more resources and subjects for an aspiring empire."
+ native_royal_marriage_title:0 "部族の統合"
+ native_royal_marriage_desc:1 "By forging marriages with other tribes, we are strengthening our position for future expansions. Expansion can start with a marriage."
+ native_alliances_title:0 "信頼できる同盟国"
+ native_alliances_desc:0 "No country can stand alone in this world. We must build lasting relationships with other countries if we are to be able to grow and prosper long term."
+ native_subjects_title:0 "従属国の獲得"
+ native_subjects_desc:0 "What good is power if no one recognizes it? We must acquire subject states that pay us the kind of respect one would expect from a country like [Root.GetName]."
+ native_unite_home_area_title:0 "地盤地域の統合"
+ native_unite_home_area_desc:0 "We cannot expect others to fear us if we are not even able to control our home area. Let's unite it!"
+ native_unite_home_region_title:0 "地盤地方の統合"
+ native_unite_home_region_desc:0 "The time has come to put all our hard work to build a viable military machine to the test. We must rise to be the true hegemon of our region, respected and feared by all."
+ native_colonize_title:0 "先住民地域の植民地化"
+ native_colonize_desc:0 "There is so much land around us, with little population and infrastructure that it would be a pity not to make it ours. We shall send our people to develop it."
+ native_build_army_mission_title:0 "扶養限界の確立"
+ native_build_army_mission_desc:0 "Any growing country must maintain a reasonably sized army. By expanding our forces we can both further our political interests abroad and stimulate our domestic economy."
+ native_assemble_an_army_title:0 "軍の構築"
+ native_assemble_an_army_desc:0 "Our territorial ambitions require a grand army. We must build and maintain a strong standing army that can defend and expand the lands under our rule."
+ control_unrest_title:0 "騒乱の制御"
+ control_unrest_desc:0 "Our conquests have brought some instability to our lands. We have to reduce the unrest."
+ build_temples_native_title:0 "寺院の建設"
+ build_temples_native_desc:0 "Our people need guidance from our spiritual leaders and what better place to have them share their wisdom than some new religious places?"
+ oceania_modernization_tag_title:0 "オセアニアの近代化"
+ oceania_modernization_tag_desc:0 "Foreign colonialism threatens to wipe out our nation if we do not adapt rapidly. We must have the technology and state apparatus to challenge them."
+ oceania_income_mission_title:0 "高い収入"
+ oceania_income_mission_desc:0 "We must increase state income by any means necessary. Money is a requirement for any endeavor of the state, from the daily expenses of the government to the maintenance of armies to invade our enemies."
+ oceania_dominate_home_trade_node_title:0 "交易の支配"
+ oceania_dominate_home_trade_node_desc:0 "Our merchant communities have been growing stronger and stronger for a long time now. It is time we give them the help they require to truly dominate our domestic trade. No foreign power must be allowed to influence the well being of our subjects."
+ oceania_dev_capital_title:0 "首都の改善"
+ oceania_dev_capital_desc:0 "The core of our nation needs to be strong so that other nations look at us in awe. We must develop it."
+ oceania_treasury_title:0 "国庫の拡大"
+ oceania_treasury_desc:0 "A large treasury is an imperative buffer for all things that could befall us through. If this is seen as miserly, it is because some do not realize that this vice is the very essence of what it means to reign."
+ oceania_imperial_ambition_mission_title:0 "帝国の征服"
+ oceania_imperial_ambition_mission_desc:0 "Securing wealth must always be the foremost priority of our state. Let us make use of the expensive armies and fleets that our economic prosperity has bought us to acquire even more resources and subjects for an aspiring empire."
+ oceania_royal_marriage_title:0 "部族の統合"
+ oceania_royal_marriage_desc:0 "By forging marriages with other tribes, we are strengthening our possition for future expansions. Expansion can start with a marriage."
+ oceania_alliances_title:0 "信頼できる同盟国"
+ oceania_alliances_desc:0 "No country can stand alone in this world. We must build lasting relationships with other countries if we are to be able to grow and prosper long term."
+ oceania_subjects_title:0 "従属国の獲得"
+ oceania_subjects_desc:0 "What good is power if no one recognizes it? We must acquire subject states that pay us the kind of respect one would expect from a country like [Root.GetName]."
+ oceania_unite_home_area_title:0 "地盤地域の統合"
+ oceania_unite_home_area_desc:0 "We cannot expect others to fear us if we are not even able to control our home area. Let's unite it!"
+ oceania_unite_home_region_title:0 "地盤地方の統合"
+ oceania_unite_home_region_desc:0 "The time has come to put all our hard work to build a viable military machine to the test. We must rise to be the true hegemon of our region, respected and feared by all."
+ oceania_colonize_title:0 "Colonization of Oceania"
+ oceania_colonize_desc:0 "There is so much land around us, with little population and infrastructure that it would be a pity not to make it ours. We shall send our people to develop it."
+ oceania_build_army_mission_title:0 "扶養限界の確立"
+ oceania_build_army_mission_desc:0 "Any growing country must maintain a reasonably sized army. By expanding our forces we can both further our political interests abroad and stimulate our domestic economy."
+ oceania_assemble_an_army_title:0 "軍の構築"
+ oceania_assemble_an_army_desc:0 "Our territorial ambitions require a grand army. We must build and maintain a strong standing army that can defend and expand the lands under our rule."
+ oceania_control_unrest_title:0 "騒乱の制御"
+ oceania_control_unrest_desc:0 "Our conquests have brought some instability to our lands. We have to reduce the unrest."
+ build_temples_oceania_title:0 "寺院の建設"
+ build_temples_oceania_desc:0 "Our people need guidance from our spiritual leaders and what better place to have them share their wisdom than some new religious places?"
+ oceania_remove_euro_title:0 "ヨーロッパ人の追放"
+ oceania_remove_euro_desc:0 "The invading Europeans are rapidly conquering Oceania, and are even expanding into our traditional homes. They must be driven back to their ships."
+ oceania_sunset_invasion_title:0 "日沈む地からの侵略"
+ oceania_sunset_invasion_desc:0 "The invaders have fled from our lands. But is that enough? At any time they might return with even more terrible force. Let us pursue them back to Europe itself."
